--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -919,9 +919,9 @@
 	</li>
 </ul>
 <p>How to form your first sentence in Coptic</p>
-<p><em class="ar">كيف تكوِن أول جملة لك فى اللغة القبطية</p>
+<p><em class="ar">كيف تكوِن أول جملة لك فى اللغة القبطية︤</em></p>
 <p>From the previous two lessons, I am going to show you how to make a full sentence.</p>
-<p><em class="ar">من الدرسين السابقين، سأبين لك كيف تكوَّن جملة إسمية كاملة</p>
+<p><em class="ar">من الدرسين السابقين، سأبين لك كيف تكوَّن جملة إسمية كاملة</em></p>
 <ol>
 	<li>
 		<p>Take a definite noun to start the sentence.</p>
@@ -959,7 +959,81 @@
 <p><em>ⲛⲓ-ⲉϫⲏⲟⲩ ⲙ̀ⲙⲁⲩ</em></p>
 <p>The ships are there.</p>
 <p><em class="ar"></em>السفن (تكون) هناك</p>
-
+<p><em class="ar">تمرينات على حروف الجر</em></p>
+<p>Exercise 1</p>
+<p><em class="ar">التمرين الأول</em></p>
+<p>New words:</p>
+<p><em class="ar">كلمات مستجدة:</em></p>
+<ul>
+	<li>
+		<p><em>ⲙⲱⲓⲧ</em></p>
+		<p>road, way</p>
+		<p><em class="ar">سكة، طريق</em></p>
+	</li>
+	<li>
+		<p><em>ⲧⲱⲟⲩ</em></p>
+		<p>mountain</p>
+		<p><em class="ar">جبل</em></p>
+	</li>
+	<li>
+		<p><em>ⲱⲛⲓ</em></p>
+		<p>rock</p>
+		<p><em class="ar">حجر، صخرة</em></p>
+	</li>
+	<li>
+		<p><em>ⲛⲟⲩⲃ</em></p>
+		<p>gold</p>
+		<p><em class="ar">ذهب</em></p>
+	</li>
+	<li>
+		<p><em>ϫⲱⲙ</em></p>
+		<p>book</p>
+		<p><em class="ar">كتاب</em></p>
+	</li>
+	<li>
+		<p><em>ⲕⲁϣ</em></p>
+		<p>pen, pencil</p>
+		<p><em class="ar">قلم</em></p>
+	</li>
+</ul>
+<p>Translate the following sentences into English:</p>
+<p><em class="ar">ترجم الآتى إلى العربية:</em></p>
+<ol>
+	<li><em>ϩⲓ ⲫ̀-ⲙⲱⲓⲧ</em></li>
+	<li><em>ϩⲓ ⲡ̀-ⲧⲱⲟⲩ</em></li>
+	<li><em>ϧⲉⲛ ⲫ̀-ⲙⲱⲓⲧ</em></li>
+	<li><em>ϧⲉⲛ ⲡ̀-ⲏⲓ</em></li>
+	<li><em>ⲉ̀ ⲡ̀-ⲏⲓ</em></li>
+	<li><em>ϩⲓ ⲡ̀-ⲱⲛⲓ</em></li>
+	<li><em>ⲛⲉⲙ ⲫ̀-ⲣⲱⲙⲓ</em></li>
+	<li><em>ⲛⲉⲙ ϯ-ⲥ̀ϩⲓⲙⲓ</em></li>
+	<li><em>ϩⲓ ⲡ̀-ϫⲱⲙ</em></li>
+	<li><em>ϧⲉⲛ ⲛⲓ-ⲏⲓ</em></li>
+	<li><em>ⲛⲉⲙ ⲛⲓ-ϩⲓⲟⲙⲓ</em></li>
+	<li><em>ϩⲓ ⲡ̀-ⲛⲟⲩⲃ</em></li>
+	<li><em>ⲫ̀-ⲣⲱⲙⲓ ⲛⲉⲙ ϯ-ⲥ̀ϩⲓⲙⲓ</em></li>
+	<li><em>ⲛⲓ-ⲣⲱⲙⲓ ⲛⲉⲙ ⲛⲓ-ϩⲓⲟⲙⲓ</em></li>
+	<li><em>ⲡⲓ-ϫⲱⲙ ⲛⲉⲙ ⲡⲓ-ⲕⲁϣ</em></li>
+	<li><em>ϩⲓϫⲉⲛ ⲛⲓ-ⲙⲱⲓⲧ</em></li>
+	<li><em>ϩⲓϫⲉⲛ ⲛⲓ-ⲏⲓ</em></li>
+</ol>
+<p>Exercise 2</p>
+<p><em class="ar">التمرين الثانى</em></p>
+<ol>
+	<li><em>ϧⲉⲛ ϯ-ⲉⲕⲕ̀ⲗⲏⲥⲓⲁ</em></li>
+	<li><em>ϧⲉⲛ ⲫ̀-ⲣⲁⲛ</em></li>
+	<li><em>ⲫ̀-ⲓⲱⲧ ⲛⲉⲙ ⲡ̀-ϣⲏⲣⲓ</em></li>
+	<li><em>ⲱ-ⲡⲁⲧⲏⲣ ⲛⲉⲙ ⲱ-ⲩⲓⲟⲩⲥ</em></li>
+	<li><em>ϧⲉⲛ ⲡ̀-ⲡⲛⲉⲩⲙⲁ</em></li>
+	<li><em>ⲫ̀-ⲓⲱⲧ ⲛⲉⲙ ⲡ-ϣⲏⲣⲓ ⲛⲉⲙ ⲡⲓ-ⲡⲛⲉⲩⲙⲁ (ⲉⲑⲟⲩⲁⲃ)</em></li>
+	<li><em>ϧⲉⲛ ⲡⲓ-ⲁⲫⲟⲧ</em></li>
+	<li><em>ⲡ̀-ⲱⲛⲓ ϩⲓϫⲉⲛ ⲫ̀-ⲙⲱⲓⲧ</em></li>
+	<li><em>ⲫ̀-ⲣⲱⲙⲓ ϩⲓϫⲉⲛ ⲡ̀-ⲏⲓ</em></li>
+	<li><em>ⲡ̀-ⲏⲓ ϩⲓϫⲉⲛ ⲡ̀-ⲧⲱⲟⲩ</em></li>
+	<li><em>ⲛⲓ-ⲣⲱⲙⲓ ϩⲓϫⲉⲛ ⲡ̀-ⲧⲱⲟⲩ</em></li>
+	<li><em>ϯ-ⲥ̀ϩⲓⲙⲓ ⲛⲉⲙ ϯ-ⲣⲱⲙⲓ</em></li>
+	<li><em>ⲛⲓ-ϫⲱⲙ ϧⲉⲛ ⲡ̀-ⲏⲓ</em></li>
+</ol>
 <div id="after">
 	<h2 class="half">After:</h2>
 	<p>[insert revised text here]</p>
