updating main landing page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
 	<head>
+		<title>Randy Komforty: Coptic Studies</title>
 		<link rel="stylesheet" href="./styles/styles.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-	
+		<h1>Randy Komforty</h1>
+		<h2>Coptic Studies</h2>
+		<br>
+		<br>
+		<p>Contact:</p>
+		<p>randykomforty [at] gmail . com</p>
+		<ul>
+			
+		</ul>
 	</body>
 </html>
