update to acts of pilate

--- a/coptic/wip/index.html
+++ b/coptic/wip/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<div class="container">
 			<div class="my_translation">
+				<h2>Translation</h2>
 				<p><b>Chapter 9. —</b> “…for a rebellion has taken place.” They said to him again, “We know that this man is just. They're responsible.”</p>
 				<p>Pilate called over the entire crowd of the Jews, and said to them, “You have here a law saying that I shall release someone to you, for the feast. For you have among you someone imprisoned, a murderer, whose is referred to as Barabbas, along with Jesus, who stands before you, against whom I have found no reason to die. Which of these two would you like me to release to you?” They cried out, “Release Barabbas for us!” He said to them again, “Then what should I do to Jesus, the one who is called Christ?” They said to him, “Crucify him!” Then others from among the Jews said, “If you release this one, you are no friend of the emperor, for he said ‘I am a child of God,’ as well as ‘I am a king’. Perhaps you really want him, rather than Emperor Caesar, to rule over us.” Pilate was angry, and said to the Jews, “Truly your race is always in revolt, and you object to those who do you good.” The Jews said to him, “Which ones are our benefactors?” He said to them, “Your God brought you out of harsh bondage from the land of Egypt, and led you through the sea as if it were dry land, and fed you with manna in the desert, and brought you a flock of quails, and nourished you with water from a rock, and gave you law. And in spite of all this, you have provoked your God: You made a calf in the wilderness, you worshipped it, and he sought to kill you until Moses repented on your behalf, so that you not die. And even now, you say to me, “You hate Emperor Caesar.” And immediately, Pilate rose up from the platform, and sought to withdraw. They cried out…</p>
 				<p><b>Chapter 10. — </b> And the soldiers divided his garments among themselves, and all the people stood looking at him, and the archpriests and princes sneered at him, saying “He has saved others—Is he not able to save himself, if he is the chosen son of God?” And the soldiers laughed at him, approaching him with vinegar, saying, “If you are the son of God, save yourself.” Pilate ordered after the decision to write the reason on a sign, written in Hebrew, Latin, and Greek, according to how the Jews said it.</p>
@@ -32,26 +33,26 @@
 						</ul>
 					</li>
 					<li><span class="coptic">ⲕ̅ⲍ̅</span> <i>Ligne 2.</i> Copt. <span class="coptic">ϩ︤ⲙ︥ⲡⲗⲁⲟⲥ</span> = <span class="greek">ἐν τῷ λαῷ</span> est omis ici comme dans Gr. B.</li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li><i>Lignes 4–7.</i> <span class="coptic">ⲁⲛⲟⲛ … ⲡⲉⲓ̈ⲣⲱⲙⲉ</span>. Cette phrase qui donne un sens excellent ne se trouve dans aucune des autres versions. Toutes donnent: <span class="greek">ἡμεῖς οὐκ ὀίδαμεν</span> = “nos nescimus” = <span class="coptic">ⲁⲛⲟⲛ ⲧⲛ̣ⲧⲛⲥⲟ ⲟⲩⲛ ⲁⲛ</span> (faute évidente dans le copte).</li>
+					<li><i>Ligne 10.</i> Copt. = <span class="coptic">ⲁϥⲉⲓⲛⲉ ⲟⲛ ⲙⲡⲙⲏⲏϣⲉ</span> au lieu de <span class="coptic">ⲁ ⲡⲓⲗⲁⲧⲟⲥ ⲇⲉ ⲙⲟⲩⲧⲉ ⲉⲡⲙⲏⲏϣⲉ</span>.</li>
+					<li><i>Ligne 16.</i> Toutes les versions grecques ont le mot <span class="greek">συνήθεια</span> = Copt. <span class="coptic">ⲥⲩⲛⲩⲑ(ⲓ)ⲁ</span> = Lat. “consuetudo” au lieu de <span class="coptic">ⲛⲟⲙⲟⲥ</span>.</li>
+					<li><i>Lignes 20–26</i>. <span class="coptic">ⲟⲩⲛⲧⲏⲧⲛ ⲅⲁⲣ … ⲃⲁⲣⲁⲃⲃⲁⲥ</span>. Cette phrase differe de celle donnée par toutes les autres versions, elle se rapproche surtout du manuscrit B.</li>
+					<li><i>Lignes 31–32</i>. Copt. <span class="coptic">ⲗⲟⲓϭⲉ</span> = dans toutes les versions grecques <span class="greek">αἰτία</span>. Le latin seul donne “causa mortis” = <span class="coptic">ⲗⲟⲓϭⲉ ⲙⲙⲟⲩ</span>.</li>
+					<li><i>Ligne 36.</i> <span class="coptic">ⲙ̇ⲡⲉⲓ̈ⲥ̇ⲛⲁⲩ</span>, ne se trouve que dans Lat. D = “ex his duobus”.</li>
+					<li><i>Ligne 38–39.</i> Conforme au latin seulement = “Barabbam dimitte nobis”.</li>
+					<li><i>Ligne 41.</i> <span class="coptic">ⲧⲁⲣⲟⲩ ϭⲉ…</span> Cette leçon corrige le manuscrit copte de Turin qui porte <span class="coptic">ⲧⲁⲗⲟ ϭⲉ</span>. C'est une faute évidente: <span class="coptic">ⲗⲟ</span> n'a pas de sens ici.</li>
+					<li>Dans le manuscrit copte de Turin la phrase est fautive; la négation manque.</li>
+					<li><i>Lignes 58–63.</i> <span class="coptic">ⲧⲁⲭⲁ ⲣⲱ … ⲕⲁⲓⲥⲁⲣ</span>. Cette rédaction diffère de toutes les autres et donne un sens meilleur.</li>
 				</ol>
 				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li><span class="coptic">ⲕ̅ⲏ̅</span> <i>Lignes 12–13.</i> Copt. <span class="coptic">ⲛⲓⲙ ⲡⲉⲧⲣ̄ ⲡⲉⲧⲛⲁⲛⲟⲩϥ</span>.</li>
+					<li><i>Ligne 15.</i> La phrase: <span class="greek">ὡς ἀκούω…</span> = Copt. <span class="coptic">ⲕⲁⲧⲁⲑⲉ ⲛⲧⲁⲓⲥⲱⲧⲙ</span> est omise ici comme dans le latin et dans la plupart des manuscrits grecs.</li>
+					<li><i>Ligne 22.</i> <span class="coptic">ϫⲓⲙⲟⲉⲓⲧ</span> = <span class="greek">ὀδήγησεν</span>. Grec B<sup>a</sup> et cf. Lat. D<sup>ba</sup>: “per mare duxit vos”. Toutes les autres versions diffèrent.</li>
+					<li><i>Lignes 43–44.</i> <span class="coptic">ⲁⲧⲉⲧⲛⲟⲩⲱϣ︤ⲧ︥ ⲛⲁϥ</span> manque dans toutes les versions. Le copte est très abrégé ici.</li>
+					<li><i>Ligne 59.</i> <span class="coptic">ⲛⲧⲉⲩⲛⲟⲩ</span> manque dans toutes les versions.</li>
+					<li>[<span class="coptic">ⲗ̅ⲁ̅</span>] <i>Ligne 7.</i> <span class="coptic">ⲧⲏⲣϥ̄</span> manque dans toutes les versions.</li>
+					<li><i>Lignes 16–21.</i> Rédaction qui diffère de toutes les autres. Se rapproche surtout du Latin C et du Grec A<sup>a</sup> C<sup>a</sup>.</li>
+					<li><i>Ligne 20.</i> <span class="coptic">ⲡⲥⲱⲡⲧ ⲛϣⲏⲣⲉ</span>. Même leçon dans Copt. et dans Lat. C.</li>
 					<li></li>
 					<li></li>
 					<li></li>
