--- a/coptic/wip/index.html
+++ b/coptic/wip/index.html
@@ -188,7 +188,57 @@
 					<p>Et toi aussi Barthélemy, mon fils, ton âme <span class="greek parenthetical">ψυχή</span> sera dépositaire des mystères <span class="greek parenthetical">μυστήριον</span> de mon Fils. Et <span class="greek parenthetical">δέ</span> toi, ô <span class="greek parenthetical">ὦ</span> Mathieu, ta puissance grandira au pointe <span class="greek parenthetical">ὥστε</span> que ton ombre ressuscitera les morts. Et <span class="greek parenthetical">δέ</span> toi, ô <span class="greek parenthetical">ὦ</span> Jacques, (c'était le fils d'Alphée) aucune puissance du diable <span class="greek parenthetical">δίαβολος</span> ne prévaudra contre ton corps <span class="greek parenthetical">σῶμα</span> ni contre ta prédication en tout lieu, mais <span class="greek parenthetical">ἀλλά</span> ce que tu auras planté deviendra indéracinable pour l'éternité. Toi Simon le Zelé <span class="greek parenthetical">Ζηλωτής</span>, dans tout lieu où tu auras établi fortement la parole <span class="greek parenthetical">λόγος</span> de mon fils, aucune puissance <span class="greek parenthetical">δύναμις</span> de l'Ennemi <span class="greek parenthetical">ἀντικειμένος</span> ne pourra y pénétrer. Et <span class="greek parenthetical">δέ</span> toi, ô <span class="greek parenthetical">ὦ</span> mon bienheureux<sup class="footnote"><a href="">1</a></sup> <span class="greek parenthetical">μακάριος</span> Mathias, ta bonne odeur se répandra dans le monde <span class="greek parenthetical">κόσμος</span> parce que tu étais riche suivant ce monde <span class="greek parenthetical">κόσμος</span> et que tu as tout abandonné pour me suivre”. Et <span class="greek parenthetical">δέ</span> toutes les armées <span class="greek parenthetical">τάγμα</span> des cieux ayant vu les bénédictions que le Père avait prononcées sur les apôtres <span class="greek parenthetical">ἀπόστολος</span> s'écrièrent “Amen”. — Mais maintenant, ô mes frères les apôtres <span class="greek parenthetical">ἀπόστολος</span>, pardonnez-moi, pardonnez à Barthélemy”.</p>
 					<p>Alors <span class="greek parenthetical">τότε</span> tous les apôtres <span class="greek parenthetical">ἀπόστολος</span> se levèrent et embrassèrent <span class="greek parenthetical">ἀσπάζεσθαι</span> Barthélemy. Et <span class="greek parenthetical">δέ</span> les apôtres ayant ainsi parlé (<i>sic</i>) se levèrent et offrirent le sacrifice <span class="greek parenthetical">προσφορά</span>. La Vierge <span class="greek parenthetical">παρθένος</span> sainte était auprès d'eux à ce moment là. Quand Jésus leur eut dit: “Venez dans la Galilée, je vous donnerai ma paix <span class="greek parenthetical">εἰρήνη</span> dans cet endroit-là”, et <span class="greek parenthetical">δέ</span> quand ils eurent reçu le corps <span class="greek parenthetical">σῶμα</span> et le sang du Fils de Dieu, le parfum de leur sacrifice <span class="greek parenthetical">θυσία</span> monta jusqu'au septième ciel. Le Père prit la parole et dit à son Fils bien-aimé: “Mon Fils unique <span class="greek parenthetical">μονογενής</span> lève-toi, descends dans le monde <span class="greek parenthetical">κόσμος</span> vers tes compagnons les apôtres <span class="greek parenthetical">ἀπόστολος</span>, console-les et donne leur de la force de peur que leur cœur venant à s'affliger <span class="greek parenthetical">λυπεῖν</span>, ils ne se découragent et ne cessent de prêcher dans le monde <span class="greek parenthetical">κόσμος</span> entier en ton nom, au mien et au nom de l'Esprit <span class="greek parenthetical">πνεῦμα</span> Saint. Va, ô <span class="greek parenthetical">ὦ</span> mon Fils chéri, cours vers tes frères qui sont tes apôtres <span class="greek parenthetical">ἀπόστολος</span> et remplis-les de joie afin qu'ils ne <span class="greek parenthetical">μήποτε</span> disent pas: “Notre Sauveur <span class="greek parenthetical">σωτήρ</span> est ressuscité d'entre les morts, il est monté dans les cieux, glorieusement, vers son Père; il nous a abandonnés dans les villes <span class="greek parenthetical">πόλις</span> et es villages, ne nous accordant point la joie en échange des souffrances que nous avons supportées dans le monde <span class="greek parenthetical">κόσμος</span>”. Alors <span class="greek parenthetical">τότε</span> le Fils de Dieu se leva et descendit dans le monde <span class="greek parenthetical">κόσμος</span>. Il alla dans la Galilée, il trouva ses disciples <span class="greek parenthetical">μαθητής</span> et la Vierge <span class="greek parenthetical">παρθένος</span> Marie qui étaient réunis. Il leur apparut et leur dit: “Salut <span class="greek parenthetical">χαῖρε</span> mes apôtres <span class="greek parenthetical">ἀπόστολος</span>, vous que j'ai choisis de préférence <span class="greek parenthetical">παρά</span> au monde <span class="greek parenthetical">κόσμος</span> entier. Salut <span class="greek parenthetical">χαῖρε</span> mes frères et mes compagnons, la paix <span class="greek parenthetical">εἰρήνη</span> de mon Père soit avec vous. Ma paix <span class="greek parenthetical">εἰρήνη</span> qui est mienne, je vous la donne.” Il souffla sur leur visage<sup class="footnote"><a href="">2</a></sup> et leur dit: “Recevez le Saint-Esprit <span class="greek parenthetical">πνεῦμα</span>: les péchés seront remis à ceux à qui vous les remettrez<sup class="footnote"><a href="">3</a></sup> et ils seront retenus à ceux à qui vous les retiendrez.” Et il nous montra ses pieds …</p>
 				</div>
-				<div class="footnotes"></div>
+				<div class="footnotes">
+					<ol>
+						<li>Béliar et Melchir figurent dans “l'Ascension d'Isaïe”: <span>R. Basset</span>, <i>Apocryphes éthiopiens</i>, III (1894), p. 11.</li>
+						<li><span class="coptic">ⲗⲁⲉⲓⲛ</span>: n'était connu que par Sir. XXXIV, 26, où il est écrit <span class="coptic">ⲭⲁⲓⲛ</span>.</li>
+						<li><span class="coptic">ⲥⲧⲟⲗⲏ</span> du texte copte est évidemment pour <span class="greek">στήλη</span> en parallélisme avec <span class="greek">πινακίς</span>.</li>
+						<li><span class="coptic">ⲧⲉⲣⲉⲡ</span> faute pour <span class="coptic">ⲧⲉⲣⲡⲉ</span> = <span class="greek">τέρπεσθαι</span> Le <span class="coptic">ⲉ</span> qui suit le <span class="coptic">ⲡ</span> a été rajouté en plus petit entre le <span class="coptic">ⲡ</span> et le <span class="coptic">ⲛ</span> suivant.</li>
+						<li><span class="coptic"></span>, <i>Apoc.</i>, IX, 11. — Dans le récit de la mort de Joseph (<span>Dulauier</span>, <i>Révélations apocryphes de saint Barthélemy</i>, p. 28–29), la mort et Abbaton sont regardés également comme un seul et même personnage.</li>
+						<li><span>Peyron</span>, <i>Lex</i>., p. 148, <span class="coptic">ⲁϥⲟⲛⲕϥ</span>: deux exemples d'après Cod. Paris. 44, fol. 88 et 121.</li>
+						<li><span class="coptic">ϩⲱⲥ</span>: <i>obturare</i>, un exemple dans Peyron. Peut-être faut-il corriger en <span class="coptic">ⲁⲩϩⲱⲥ</span>. On aurait au passif: “les fours avaient été bouchés”.</li>
+						<li><i>Marc</i>, IX, 48.</li>
+						<li><span class="coptic">ϩⲙ̄ⲡⲛⲟⲩⲧⲉ</span>. Il doit manquer un mot; peut-être une ligne a-t-elle été sautée?</li>
+						<li><span class="coptic">ⲕⲉⲗⲟⲥ</span>. Qu'est ce que ce mot?</li>
+						<li>Allusion à <i>Jean</i>, XVIII, 22, ou c'est un soldat qui frappe Jésus. <span class="coptic">ϣ︤ⲥ︥</span> “coup”. Cf. <span class="coptic">ϣ̄ⲥ ⲛⲁⲥ</span>, <i>Jean</i>, XVIII, 22, donné par Peyron d'après Cod. Paris. 44, fol. 7. Ici nous avons un <span class="coptic">ⲁ</span> de trop.</li>
+						<li><span class="coptic">ⲁⲓⲧⲉⲓ</span> = <span class="greek"></span>.</li>
+						<li><i>Marc</i>, XVI, 1.</li>
+						<li>Ce détail n'est pas dans les Évangiles, mais cf. <i>Luc</i>, VIII, 2.</li>
+						<li><i>Matth</i>, XX, 20–23.</li>
+						<li><i>Luc</i>, X, 38–42, <i>Jean</i>, XII, 2. Dans ces deux passages c'est Marthe et non Marie qui sert <span class="greek parenthetical"></span> le Seigneur.</li>
+						<li><i>Luc</i>, XXIV, 10 et <i>Luc</i>, VIII, 3, <span class="greek"></span>.</li>
+						<li><i>Matth.</i>, IX, 20–22 = <i>Marc</i>, V. 25–34 = <i>Luc</i>, VIII, 43–48. Le nom de la femme n'est pas donné dans les synoptiques.</li>
+						<li><i>Luc</i>, XI, 17. Mais le nom de la veuve n'est pas donné.</li>
+						<li><i>Luc</i>, VII, 47.</li>
+						<li>Cf. <i>Luc</i>, IX, 37–42.</li>
+						<li><i>Jean</i>, XX, 15: “<span class="greek"></span>”.</li>
+						<li><i>Matth.</i>, XXVII, 66: <span class="greek"></span>. La phrase copte reproduit exactement la concision du grec: <span class="coptic">ⲙⲛ̄</span> = <span class="greek"></span>.</li>
+						<li><span class="coptic">ⲛⲥⲁⲃⲏⲗϫⲉ … ⲙⲙⲟⲛ ⲉϣϫⲉ</span>. Ce doit être pour <span class="coptic">ⲉϣϫⲉ ⲙⲙⲟⲛ</span>; il y a à côte de <span class="coptic">ⲉϣϫⲉ</span> un signe <span class="coptic">ⲵ</span> qui indique sans doute qu'il faut transposer les deux mots.</li>
+						<li><span class="coptic">ⲕⲓⲃⲱⲇⲟⲥ</span>. Plus loin, page <span class="coptic">ⲝ̅ⲉ̅</span>, I. 59, on a <span class="coptic">ⲕⲓⲃⲟⲩⲇⲟⲥ</span>. Cette hésitation dans l'orthographe des mots grecs est intéressante de la part d'un même scribe.</li>
+						<li><i>Philosophumena</i>, P. Cruice, 1860, p. 497. Les <span class="greek"></span> disent que: <span class="greek"></span> etc.</li>
+						<li>Il faut corriger: <span class="coptic">ⲛⲁⲥⲛⲏⲩ</span>.</li>
+						<li>L'autre rédaction donne plus logiquement ici le futur. <span class="coptic">ϯⲛⲁⲧⲁⲁⲥ</span> au lieu de <span class="coptic">ⲁⲓⲧⲁⲁⲥ</span>.</li>
+						<li><i>Jean</i>, XX, 17: <span class="greek"></span>.</li>
+						<li><span class="coptic">ⲕⲁⲁⲓ̈</span>, cette forme verbale avec suffixe de la deuxième personne du féminin ne m'est pas connue.</li>
+						<li>Ne faudrait-il pas <span class="coptic">ⲉϥⲛⲁⲫ[ⲉⲣⲉ]ⲓ̈</span>?</li>
+						<li>La phrase commence par ce mot, le texte copte porte une majuscule.</li>
+						<li><span>Dulaurier</span>, <i>op. cit.</i>, p. 36, 1.5, donne <span class="coptic">ⲁⲇⲁⲙ ⲙⲛⲧⲉϥⲥϩⲓⲙⲉ ⲱⲛⲛⲉϥϣⲏⲣⲉ</span>. “Adam et sa femme Ève, qui sont ses enfants”. L'original est très effacé à cet endroit, mais il y a des traces d'un <span class="coptic">ⲙ</span> à la place de <span class="coptic">ⲱ</span>. Le <span class="coptic">ⲱ</span> est impossible, il n'y a pas l'espace voulu pour cette lettre qui est toujours beaucoup plus large que le <span class="coptic">ⲙ</span> dans le reste du texte. Au contraire il y a exactement le même espace qu'à la ligne du dessus où l'on trouve justement le mot <span class="coptic">ⲙⲛ</span>. Dulaurier a sans doute pensé à une forme <span class="coptic">ⲱ ⲛ̄-</span> pour <span class="coptic">ⲟ ⲛ̄-</span> qui ne peut convenir ici.</li>
+						<li><span class="coptic">ϩⲱⲕ</span>, Dulaurier traduit par “parure” mais <span class="coptic">ϩⲱⲕ</span> a le sens très précis de “zona, thorax”.</li>
+						<li><span class="coptic">ⲁⲅⲅⲉⲗⲓⲕⲏ</span>, voir <span>Von Lemm</span>, <i>Kleine Koptische Studien</i>, XXII. — <i>Bull. Acad. des Sciences Saint-Pétersbourg</i> (1901), XIV, p. 292.</li>
+						<li><span>Dulaurier</span>, <i>op. cit.</i>, p. 37, I. 21, donne <span class="coptic">ⲇⲱⲣⲉⲁ</span> au lieu de <span class="coptic">ⲧⲱⲣⲉⲁ</span>.</li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ol>
+				</div>
 			</div>
 			<div class="work">
 				<h2>V. Évangile (?) Apocryphe.</h2>
