--- a/coptic/wip/index.html
+++ b/coptic/wip/index.html
@@ -12,6 +12,11 @@
 				<div class="diplomatic_text coptic">
 				</div>
 				<div class="normalized_text coptic">
+					<p>“… ϫⲉ ⲁ-ⲟⲩⲥⲧⲁⲥⲓⲥ ϣⲱⲡⲉ.” ⲡⲉϫⲁⲩ ⲛⲁϥ ⲟⲛ, ϫⲉ “ⲁⲛⲟⲛ ⲧⲛ̄ⲥⲟⲟⲩⲛ ϫⲉ ⲟⲩⲇⲓⲕⲁⲓⲟⲥ ⲡⲉ ⲡⲉⲓⲣⲱⲙⲉ. ⲛⲧⲟⲟⲩ ϩⲱⲱⲟⲩ ⲥⲉⲣⲱϣⲉ.”</p>
+					<p>ⲁ-ⲡⲓⲗⲁⲧⲟⲥ ⲇⲉ ⲙⲟⲩⲧⲉ ⲉⲡⲙⲏⲏϣⲉ ⲧⲏⲣϥ̄ ⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲡⲉϫⲁϥ ⲛⲁⲩ, ϫⲉ “ⲟⲩⲛ̄ⲧⲏⲧⲛ̄ ⲙ̄ⲙⲁⲩ ⲛ̄ⲟⲩⲛⲟⲙⲟⲥ ϫⲉⲕⲁⲁⲥ ⲉⲓⲉⲕⲁ-ⲟⲩⲁ ⲛⲏⲧⲛ̄ ⲉⲃⲟⲗ ⲕⲁⲧⲁϣⲁ. ⲟⲩⲛ̄ⲧⲏⲧⲛ̄ ⲅⲁⲣ ⲙ̄ⲙⲁⲩ ⲛ̄ⲟⲩⲁ ⲉϥⲙⲏⲣ, ⲉⲩⲫⲟⲛⲉⲩⲥ ⲡⲉ, ⲉϣⲁⲩⲙⲟⲩⲧⲉ ⲉⲡⲉϥⲣⲁⲛ ϫⲉ ⲃⲁⲣⲁⲃⲃⲁⲥ, ⲙⲛ̄ⲓ︤ⲥ︥, ⲡⲁⲓ ⲉⲧⲁϩⲉⲣⲁⲧϥ̄ ⲙ̄ⲡⲉⲧⲛ̄ⲙⲧⲟ ⲉⲃⲟⲗ, ⲡⲁⲓ ⲉⲧⲉⲙ̄ⲡⲓϩⲉ ⲉⲗⲁⲁⲩ ⲛ̄ⲗⲟⲓϭⲉ ⲙ̄ⲙⲟⲩ ⲉϩⲟⲩⲛ ⲉⲣⲟϥ. ⲉⲧⲉⲧⲛ̄ⲟⲩⲱϣ ⲉⲧⲣⲁⲕⲁ-ⲛⲓⲙ ⲛⲏⲧⲛ̄ ⲉⲃⲟⲗ ⲙ̄ⲡⲉⲓⲥⲛⲁⲩ?” ⲁⲩⲱϣ ⲉⲃⲟⲗ, ϫⲉ “ⲕⲁ-ⲃⲁⲣⲁⲃⲃⲁⲥ ⲛⲁⲛ ⲉⲃⲟⲗ.” ⲡⲉϫⲁϥ ⲛⲁⲩ ⲟⲛ, ϫⲉ “ⲧⲁⲣ̄-ⲟⲩ ϭⲉ ⲛ̄ⲓ︤ⲥ︥, ⲡⲉⲧⲟⲩⲙⲟⲩⲧⲉ ⲉⲣⲟϥ ϫⲉ ⲡⲉⲭ︤ⲥ︥?” ⲡⲉϫⲁⲩ ⲛⲁϥ, ϫⲉ “ⲥⲧⲁⲩⲣⲟⲩ ⲙ̄ⲙⲟϥ.” ϩⲉⲛⲕⲟⲟⲩⲉ ϭⲉ ⲉⲃⲟⲗ ϩⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲛⲉⲩϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲉⲕϣⲁⲛⲕⲁ-ⲡⲁⲓ ⲉⲃⲟⲗ, ⲛⲧⲕ-ⲡⲉϣⲃⲏⲣ ⲁⲛ ⲙ̄ⲡⲣⲣⲟ, ϫⲉ ⲁϥϫⲟⲟⲥ, ϫⲉ ‘ⲁⲛⲅ-ⲟⲩϣⲏⲣⲉ ⲛ̄ⲛⲟⲩⲧⲉ’ ⲁⲩⲱ ⲟⲛ, ϫⲉ ‘ⲁⲛⲅ-ⲟⲩⲣⲣⲟ’. ⲧⲁⲭⲁ ⲣⲱ ⲉⲕⲟⲩⲉϣ-ⲡⲁⲓ ⲉⲧⲣⲉϥⲣ̄ⲣⲣⲟ ⲉϩⲣⲁⲓ ⲉϫⲱⲛ ⲉϩⲟⲩⲉⲡⲣⲣⲟ ⲕⲁⲓⲥⲁⲣ.” ⲁϥϭⲱⲛⲧ ⲛ̄ϭⲓⲡⲓⲗⲁⲧⲟⲥ, ⲡⲉϫⲁϥ ⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ, ϫⲉ “ⲁⲗⲏⲑⲱⲥ ⲡⲉⲧⲛ̄ϩⲉⲑⲛⲟⲥ ⲥⲧⲁⲥⲓⲁⲍⲉ ⲛ̄ⲟⲩⲟⲉⲓϣ ⲛⲓⲙ, ⲁⲩⲱ ⲧⲉⲧⲛ̄ⲁⲛⲧⲓⲗⲉⲅⲉⲓ ⲛ̄ⲛⲉⲧⲉⲣ̄ⲡⲉⲧⲛⲁⲛⲟⲩϥ ⲛⲏⲧⲛ̄.” ⲡⲉϫⲁⲩ ⲛ̄ϭⲓ ⲛ̄ⲓⲟⲩⲇⲁⲓ, ϫⲉ “ⲁϣ ⲛⲉⲛⲡⲉⲧⲛⲁⲛⲟⲩⲟⲩ?” ⲡⲉϫⲁϥ ⲛⲁⲩ, ϫⲉ “ⲡⲉⲧⲛ̄ⲛⲟⲩⲧⲉ ⲁϥⲛ̄ⲧ-ⲧⲏⲩⲧⲛ̄ ⲉⲃⲟⲗ ϩⲛ̄ⲟⲩⲙⲛⲧϩⲙϩⲁⲗ ⲉⲥⲛⲁϣⲧ ⲉⲃⲟⲗ ϩⲙ̄ⲡⲕⲁϩ ⲛ̄ⲕⲏⲙⲉ, ⲁⲩⲱ ⲁϥϫⲓⲙⲟⲉⲓⲧ ϩⲏⲧ-ⲧⲏⲩⲧⲛ̄ ϩⲛ̄ⲧϩⲁⲗⲁⲥⲥⲁ ⲛ̄ⲧϩⲉ ⲛ̄ⲟⲩⲡⲉⲧϣⲟⲩϣⲟⲩ, ⲁⲩⲱ ⲁϥⲧⲙⲉ-ⲧⲏⲩⲧⲛ̄ ϩⲙ̄ⲡⲙⲁⲛⲛⲁ ϩⲛ̄ⲧⲉⲣⲏⲙⲟⲥ, ⲁⲩⲱ ⲁϥⲉⲓⲛⲉ ⲛⲏⲧⲛ̄ ⲛ̄ⲟⲩϩⲏ ⲙ̄ⲡⲏⲣⲉ, ⲁⲩⲱ ⲁϥⲧⲥⲉ-ⲧⲏⲩⲧⲛ̄ ⲛ̄ⲟⲩⲙⲟⲟⲩ ⲉⲃⲟⲗ ϩⲛ̄ⲟⲩⲡⲉⲧⲣⲁ, ⲁⲩⲱ ⲁϥϯ ⲛⲏⲧⲛ̄ ⲛ̄ⲟⲩⲛⲟⲙⲟⲥ. ⲉϫⲛ̄ⲛⲁⲓ ⲇⲉ ⲧⲏⲣⲟⲩ, ⲁⲧⲉⲧⲛ̄ϯⲛⲟⲩϭⲥ ⲙ̄ⲡⲉⲧⲛ̄ⲛⲟⲩⲧⲉ, ⲁⲧⲉⲧⲛ̄ⲧⲁⲙⲓⲟ ⲛ̄ⲟⲩⲙⲁⲥⲉ ϩⲙ̄ⲡϫⲁⲓⲉ, ⲁⲧⲉⲧⲛ̄ⲟⲩⲱϣⲧ ⲛⲁϥ. ⲁⲩⲱ ⲁϥϣⲓⲛⲉ ⲛ̄ⲥⲁⲙⲉⲩⲧ-ⲧⲏⲩⲧⲛ̄ ϣⲁⲛⲧⲉ-ⲙⲱⲩⲥⲏⲥ ⲙⲉⲧⲁⲛⲟⲉⲓ ⲉϩⲣⲁⲓ ⲉϫⲛ̄-ⲧⲏⲩⲧⲛ̄, ⲛ̄ⲧⲉⲧⲛ̄ⲧⲙ̄ⲙⲟⲩ. ⲧⲉⲛⲟⲩ ϭⲉ ϩⲱⲱϥ, ⲧⲉⲧⲛ̄ϫⲱ ⲙ̄ⲙⲟⲥ ⲉⲣⲟⲓ ϫⲉ ⲉⲕⲙⲟⲥⲧⲉ ⲙ̄ⲡⲣⲣⲟ ⲕⲁⲓⲥⲁⲣ.” ⲁϥⲧⲱⲟⲩⲛ ⲇⲉ ⲛ̄ⲧⲉⲩⲛⲟⲩ ⲛ̄ϭⲓⲡⲓⲗⲁⲧⲟⲥ ⲉⲃⲟⲗ ϩⲙ̄ⲡⲃⲏⲙⲁ, ⲁϥϣⲓⲛⲉ ⲛ̄ⲥⲁⲁⲛⲁⲭⲱⲣⲉⲓ. ⲁⲩⲱϣ ⲉⲃⲟⲗ…</p>
+					<p>… ⲉⲓ, ⲁⲩⲱ ⲙ̄ⲙⲁⲧⲟⲓ ⲁⲩⲡⲉϣ-ⲛⲉϥϩⲟⲓⲧⲉ ⲉϫⲱⲟⲩ, ⲁⲩⲱ ⲛⲉⲣⲉ-ⲡⲗⲁⲟⲥ ⲧⲏⲣϥ̄ ⲁϩⲉⲣⲁⲧϥ̄ ⲉⲩⲑⲉⲱⲣⲉⲓ ⲙ̄ⲙⲟϥ, ⲁⲩⲱ ⲉⲛⲉⲩⲉⲗⲕϣⲁ ⲛ̄ⲥⲱϥ ⲛ̄ϭⲓⲛ̄ⲁⲣⲭⲓⲉⲣⲉⲩⲥ ⲙⲛ̄ⲛ̄ⲁⲣⲭⲱⲛ, ⲉⲩϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲁϥⲧⲟⲩϫⲉ-ϩⲉⲛⲕⲟⲟⲩⲉ; ⲉⲓⲉ ⲙⲛ̄-ϭⲟⲙ ⲙ̄ⲙⲟϥ ⲉⲧⲟⲩϫⲟϥ, ⲉϣϫⲉ ⲡⲁⲓ ⲡⲉ ⲡⲥⲱⲡⲧ ⲛ̄ϣⲏⲣⲉ ⲛ̄ⲧⲉⲡⲛⲟⲩⲧⲉ?” ⲁⲩⲱ ⲛⲉⲣⲉ-ⲙ̄ⲙⲁⲧⲟⲓ ⲥⲱⲃⲉ ⲛ̄ⲥⲱϥ, ⲉ-ⲁⲩϯ ⲙ̄ⲡⲉⲩⲟⲩⲟⲓ ⲉⲣⲟϥ ⲙⲛ̄ⲟⲩϩⲙϫ, ⲉⲩϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲉϣϫⲉ ⲛⲧⲟⲕ ⲡⲉ ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ, ⲙⲁ-ⲧⲟⲩϫⲟⲕ.” ⲁϥⲕⲉⲗⲉⲩⲉ ⲛ̄ϭⲓⲡⲓⲗⲁⲧⲟⲥ ⲙⲛ̄ⲛ̄ⲥⲁⲧⲁⲡⲟⲫⲁⲥⲓⲥ ⲉⲥϩⲁⲓ ⲛ̄ⲧⲉϥⲁⲓⲧⲓⲁ ⲉⲩⲧⲓⲧⲗⲟⲥ ⲉϥⲥⲏϩ ⲙ̄ⲙⲛⲧϩⲉⲃⲣⲉⲟⲥ, ⲙ̄ⲙⲛⲧϩⲣⲱⲙⲁⲓⲟⲥ, ⲙ̄ⲙⲛⲧⲟⲩⲉⲓⲉⲛⲓⲛ, ⲕⲁⲧⲁⲧϩⲉ ⲛ̄ⲧⲁⲩϫⲟⲟⲥ ⲛ̄ϭⲓⲛ̄ⲓⲟⲩⲇⲁⲓ.</p>
+					<p>ⲟⲩⲁ ⲇⲉ ⲛ̄ⲛ̄ⲥⲟⲟⲛⲉ ⲉⲧⲁϣⲉ ⲛⲙ̄ⲙⲁϥ, ⲡⲁⲓ ⲉ-ⲡⲉϥⲣⲁⲛ ⲡⲉ ⲕⲉⲥⲧⲁⲥ, ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲉϣϫⲉ ⲛⲧⲟⲕ ⲡⲉ ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ, ⲙⲁ-ⲧⲟⲩϫⲟⲕ ⲛⲙ̄ⲙⲁⲛ ϩⲱⲱⲛ.” ⲁϥⲟⲩⲱϣⲃ ⲛ̄ϭⲓⲡⲕⲉⲟⲩⲁ, ⲡⲁⲓ ⲉ-ⲡⲉϥⲣⲁⲛ ⲡⲉ ⲇⲏⲙⲁⲥ, ⲁϥⲉⲡⲓⲧⲓⲙⲁ ⲛⲁϥ, ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲉⲓⲉ ⲕⲣ̄ϩⲟⲧⲉ ⲛⲧⲟⲕ ⲁⲛ ⲛ̄ϩⲏⲧϥ̄ ⲙ̄ⲡⲛⲟⲩⲧⲉ, ϫⲉ ⲉⲛϣⲟⲟⲡ ϩⲙ̄ⲡⲉⲓⲕⲣⲓⲙⲁ ⲛ̄ⲟⲩⲱⲧ ⲛⲙ̄ⲙⲁϥ? ⲁⲛⲟⲛ ⲅⲁⲣ ⲇⲓⲕⲁⲓⲱⲥ ⲉⲛϫⲓ ⲕⲁⲧⲁⲡⲉⲙⲡϣⲁ ⲛ̄ⲛⲉⲛⲧⲁⲛⲁⲁⲩ, ⲡⲁⲓ ⲇⲉ ⲛⲧⲟϥ ⲙ̄ⲡⲉϥⲣ̄-ⲗⲁⲁⲩ ⲛ̄ϩⲱⲃ ⲛ̄ⲁⲧⲟⲡⲟⲛ ⲁⲩⲱ ⲉϥⲙⲡϣⲁ ⲙ̄ⲡⲙⲟⲩ, ⲁⲩⲛ̄ⲧϥ̄ ⲉⲡⲉⲓⲙⲁ.” ⲁϥⲕⲟⲧϥ̄ ⲇⲉ ⲟⲛ ⲛ̄ϭⲓⲇⲏⲙⲁⲥ ⲡⲉϫⲁϥ ⲛ̄ⲓ︤ⲥ︥, ϫⲉ “ⲡⲁϫⲟⲉⲓⲥ, ⲁⲣⲓ-ⲡⲁⲙⲉⲉⲩⲉ ⲉⲕϣⲁⲛⲉⲓ ϩⲛ̄ⲧⲉⲕⲙⲛⲧⲣⲣⲟ ⲉⲧⲟⲩⲁⲁⲃ ⲁⲩⲱ ⲉⲧⲧⲁⲓⲏⲩ.” ⲡⲉϫⲁϥ ⲛⲁϥ ⲛ̄ϭⲓⲓ︤ⲥ︥, ϫⲉ “ϩⲁⲙⲏⲛ ϯϫⲱ ⲙ̄ⲙⲟⲥ ⲛⲁⲕ ϫⲉ ⲕⲛⲁϣⲱⲡⲉ ⲛⲙ̄ⲙⲁⲓ ⲙ̄ⲡⲟⲟⲩ ϩⲙ̄ⲡⲁⲡⲁⲣⲁⲇⲉⲓⲥⲟⲥ.”</p>
+					<p>ⲉ-ⲛⲉ-ⲡⲛⲁⲩ ⲅⲁⲣ ⲛ̄ϫⲡ-ⲥⲟ ⲡⲉ, ⲁⲩⲕⲁⲕⲉ ϣⲱⲡⲉ ϩⲓϫⲙ̄ⲡⲕⲁϩ ⲧⲏⲣϥ̄ ϣⲁⲡⲛⲁⲩ ⲛ̄ϫⲡ-ⲯⲓⲧⲉ. ⲛⲉⲣⲉ-ⲡⲣⲏ ⲣ̄ⲕⲁⲕⲉ, ⲁⲩⲱ ⲁ-ⲡⲕⲁⲧⲁⲡⲉⲧⲁⲥⲙⲁ ⲙ̄ⲡⲉⲣⲡⲉ ⲡⲱϩ, ϫⲓⲛⲧⲡⲉ ⲉⲡⲉⲥⲏⲧ, ⲁϥⲣ̄-ⲥⲛⲁⲩ. ⲁϥⲱϣ ⲉⲃⲟⲗ ⲛ̄ϭⲓ ⲓ︤ⲥ︥ ϩⲛ̄ⲟⲩⲛⲟϭ ⲛ̄ⲥⲙⲏ, ϫⲉ “ⲡⲁⲉⲓⲱⲧ, ⲁⲃⲓⲁⲇⲁⲭ ⲉⲫⲕⲓⲇⲣⲟⲩ ⲁⲇⲱⲛⲁⲓ ⲁⲣⲟⲁ ⲥⲁⲃⲏⲗ ⲗⲟⲩⲏⲗ ⲉⲗⲱⲉⲓ ⲉⲗⲉⲙⲁⲥ ⲁⲃⲁⲕⲇⲁⲛⲉⲓ ⲟⲣⲓⲱⲑ ⲙⲓⲟⲑ ⲟⲩⲁⲁⲑ ⲥⲟⲩⲛ ⲡⲉⲣⲓⲛⲏⲑ ⲓⲱⲑⲁⲧ”, ⲧⲉⲡⲣⲟⲥⲉⲩⲭⲏ ⲙ̄ⲡⲥⲱⲧⲏⲣ ϩⲓϫⲙ̄ⲡⲉⲥⲧⲁⲩⲣⲟⲥ ⲉⲧⲃⲉⲁⲇⲁⲙ. ϩⲛ̄ⲧⲉⲩⲛⲟⲩ ⲇⲉ ⲛ̄ⲧⲁ-ⲡⲥⲱⲧⲏⲣ ϫⲉ-ⲛⲁⲓ, ⲁ-ⲡⲁⲏⲣ ϣⲓⲃⲉ, ⲁ-ⲡⲙⲁ ⲣ̄ⲕⲁⲕⲉ, ⲁ-ⲡⲛⲟⲩⲛ ⲡⲱϩ, ⲁ-ⲡⲉⲥⲧⲉⲣⲉⲱⲙⲁ ϣⲧⲟⲣⲧⲣ.”</p>
 				</div>
 				<div class="my_translation">
 					<h2>Translation</h2>
@@ -78,17 +83,16 @@
 			<div class="work">
 				<h2>II. Évangile (?) Apocryphe.</h2>
 				<div class="normalized_text coptic">
-					<p>ⲁϥⲙⲟⲩⲧⲉ ⲉⲡⲙⲉϩⲥⲛⲁⲩ ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ϯⲥⲟⲟⲩⲛ ϫⲉ ⲛⲧⲕ-ⲟⲩⲣⲉϥϫⲉⲙⲉ ⲛ̄ϩⲟⲩⲟ ⲉⲛⲁⲓ ⲧⲏⲣⲟⲩ. ⲙⲁ-ⲧⲁⲙⲟⲓ, ϫⲉ ⲁⲟⲩⲏⲣ ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ ϥⲓ ⲙ̄ⲡⲥⲱⲙⲁ ⲛ̄ⲓ︤ⲥ︥ ϩⲙ̄ⲡⲧⲁⲫⲟⲥ?”</p>
-					<p>ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲁⲩⲉⲓ ⲙ̄ⲡⲙⲛⲧⲟⲩⲉⲓ ⲙⲛ̄ⲛⲉⲩⲕⲉⲙⲁⲑⲏⲧⲏⲥ, ⲁⲩϥⲓⲧϥ̄ ⲛ̄ϫⲓⲟⲩⲉ, ⲁϥⲡⲱⲣϫ ⲙ̄ⲡⲉⲓⲕⲉⲟⲩⲁ ⲉⲃⲟⲗ.”</p>
-					<p>ⲁϥⲙⲟⲩⲧⲉ ⲉⲡⲙⲉϩϣⲟⲙⲛⲧ ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲉⲓⲥϩⲏⲏⲧⲉ, ϯϫⲓ ⲛ̄ⲧⲉⲕⲙⲛⲧⲙⲛⲧⲣⲉ ⲡⲁⲣⲁϩⲁϩ ⲛⲓⲙ ⲡⲉⲛⲧⲁϥϥⲓ ⲙ̄ⲡⲥⲱⲙⲁ ⲛ̄ⲓ︤ⲥ︥ ϩⲙ̄ⲡⲧⲁⲫⲟⲥ.”</p>
-					<p>ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲓⲱⲥⲏⲫ ⲡⲉ ⲙⲛ̄ⲛⲉⲓⲕⲱⲇⲏⲙⲟⲥ ⲙⲛ̄ⲧⲉⲩⲥⲩⲅⲅⲉⲛⲓⲁ ⲧⲏⲣⲥ̄.”</p>
-					<p>ⲁϥⲙⲟⲩⲧⲉ ⲉⲡⲙⲉϩϥⲧⲟⲟⲩ ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲛⲧⲟⲕ ⲡⲉ ⲡⲛⲟϭ ⲉⲧⲛ̄ϩⲏⲧⲟⲩ, ⲁⲩⲱ ⲛ̄ⲧⲁⲓϯ ⲛ̄ⲛⲁⲓ ⲧⲏⲣⲟⲩ ⲉⲧⲟⲟⲧⲕ̄. ⲙⲁ-ⲧⲁⲙⲟⲓ ⲧⲉⲛⲟⲩ, ϫⲉ ⲟⲩ ⲡⲉⲛⲧⲁϥϣⲱⲡⲉ ⲁⲩϥⲓ ⲙ̄ⲡⲥⲱⲙⲁ ⲛ̄ⲓ︤ⲥ︥ ϩⲙ̄ⲡⲧⲁⲫⲟⲥ ⲛ̄ⲧⲟⲟⲧⲧⲏⲩⲧⲛ̄?”</p>
-					<p>ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲡⲉⲛϫⲟⲉⲓⲥ ⲡϩⲏⲅⲉⲙⲱⲛ, ⲉⲛⲕⲟⲧⲕ ⲉⲛⲟⲃϣ, ⲁⲩⲱ ⲙ̄ⲡⲉⲛⲉⲓⲙⲉ ⲉⲡⲉⲛⲧⲁϥϥⲓⲧϥ̄, ⲉⲓⲙⲏⲧⲓ ϫⲉ ⲁⲛⲧⲱⲟⲩⲛ ⲁⲛϣⲓⲛⲉ [ⲁⲩⲱ ⲙ̄ⲡⲉ]ⲛϩⲉ ⲉⲣⲟ[ϥ..] [..]ⲥⲏⲧ ⲛ̄[...] ⲙ̄ⲙⲟⲟⲩ ⲛ̄[...] ⲁⲛϫⲟⲟⲥ ϫⲉ [ⲟⲩ] ⲡⲉϣⲧⲟⲣⲧ[ⲣ ⲡⲉ] ⲡⲁⲓ.”</p>
-					<p>ⲡⲉϫⲉ-ⲡⲓⲗⲁⲧⲟⲥ ⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲙⲛ̄ⲡϩⲉⲕⲁⲧⲟⲛⲧⲁⲣⲭⲟⲥ, ϫⲉ “ⲉⲣⲉ-ⲛⲁⲓ ⲥⲙⲟⲛⲧ ⲛ̄ⲧⲉⲓϩⲉ ⲉⲣⲉ-ⲛⲉⲩϣⲁϫⲉ ⲡⲏϣ ⲉⲡϭⲟⲗ ⲁⲩⲱ ⲁϥⲟⲩⲉϩⲥⲁϩⲛⲉ ⲉⲧⲣⲉⲩⲱⲣϫ ⲛ̄ⲙ̄ⲙⲁⲧⲟⲓ ϣⲁⲛⲧⲉϥⲉⲓ ⲉⲡⲧⲁⲫⲟⲥ.”</p>
-					<p></p>
-					<p></p>
-					<p></p>
-					<p></p>
+					<p>ⲁϥⲙⲟⲩⲧⲉ ⲉⲡⲙⲉϩⲥⲛⲁⲩ ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ϯⲥⲟⲟⲩⲛ ϫⲉ ⲛⲧⲕ-ⲟⲩⲣⲉϥϫⲉⲙⲉ ⲛ̄ϩⲟⲩⲟ ⲉⲛⲁⲓ ⲧⲏⲣⲟⲩ. ⲙⲁ-ⲧⲁⲙⲟⲓ ϫⲉ ⲁ-ⲟⲩⲏⲣ ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ ϥⲓ ⲙ̄ⲡⲥⲱⲙⲁ ⲛ̄ⲓ︤ⲥ︥ ϩⲙ̄ⲡⲧⲁⲫⲟⲥ.” ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲁⲩⲉⲓ ⲙ̄ⲡⲙⲛⲧⲟⲩⲉ ⲙⲛ̄ⲛⲉⲩⲕⲉⲙⲁⲑⲏⲧⲏⲥ, ⲁⲩϥⲓⲧϥ̄ ⲛ̄ϫⲓⲟⲩⲉ.” ⲁϥⲡⲱⲣϫ ⲙ̄ⲡⲉⲓⲕⲉⲟⲩⲁ ⲉⲃⲟⲗ.</p>
+					<p>ⲁϥⲙⲟⲩⲧⲉ ⲉⲡⲙⲉϩϣⲟⲙⲛⲧ ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲉⲓⲥϩⲏⲏⲧⲉ, ϯϫⲓ ⲛ̄ⲧⲉⲕⲙⲛⲧⲙⲛⲧⲣⲉ ⲡⲁⲣⲁϩⲁϩ. ⲛⲓⲙ ⲡⲉⲛⲧⲁϥϥⲓ ⲙ̄ⲡⲥⲱⲙⲁ ⲛ̄ⲓ︤ⲥ︥ ϩⲙ̄ⲡⲧⲁⲫⲟⲥ?” ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲓⲱⲥⲏⲫ ⲡⲉ, ⲙⲛ̄ⲛⲉⲓⲕⲱⲇⲏⲙⲟⲥ, ⲙⲛ̄ⲧⲉⲩⲥⲩⲅⲅⲉⲛⲉⲓⲁ ⲧⲏⲣⲥ̄.”</p>
+					<p>ⲁϥⲙⲟⲩⲧⲉ ⲉⲡⲙⲉϩϥⲧⲟⲟⲩ ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲛⲧⲟⲕ ⲡⲉ ⲡⲛⲟϭ ⲉⲧⲛ̄ϩⲏⲧⲟⲩ, ⲁⲩⲱ ⲛ̄ⲧⲁⲓϯ ⲛ̄ⲛⲁⲓ ⲧⲏⲣⲟⲩ ⲉⲧⲟⲟⲧⲕ̄. ⲙⲁ-ⲧⲁⲙⲟⲓ ⲧⲉⲛⲟⲩ ϫⲉ ⲟⲩ ⲡⲉⲛⲧⲁϥϣⲱⲡⲉ. ⲁⲩϥⲓ ⲙ̄ⲡⲥⲱⲙⲁ ⲛ̄ⲓ︤ⲥ︥ ϩⲙ̄ⲡⲧⲁⲫⲟⲥ ⲛ̄ⲧⲟⲟⲧ-ⲧⲏⲩⲧⲛ̄.” ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲡⲉⲛϫⲟⲉⲓⲥ ⲡϩⲏⲅⲉⲙⲱⲛ, ⲉⲛⲛⲕⲟⲧⲕ ⲉⲛⲟⲃϣ, ⲁⲩⲱ ⲙ̄ⲡⲉⲛⲉⲓⲙⲉ ⲉⲡⲉⲛⲧⲁϥϥⲓⲧϥ̄. ⲉⲓⲙⲏⲧⲓ ϫⲉ ⲁⲛⲧⲱⲟⲩⲛ ⲁⲛϣⲓⲛⲉ ⲁⲩⲱ ⲙ̄ⲡⲉⲛϩⲉ ⲉⲣⲟϥ … ⲥⲏⲧ ⲛ̄ … ⲙ̄ⲙⲟⲟⲩ ⲛ̄ … ⲁⲛϫⲟⲟⲥ, ϫⲉ ‘ⲟⲩ ⲡⲉϣⲧⲟⲣⲧⲣ ⲡⲉ ⲡⲁⲓ?’”</p>
+					<p>ⲡⲉϫⲉ-ⲡⲓⲗⲁⲧⲟⲥ ⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲙⲛ̄ⲡϩⲉⲕⲁⲧⲟⲛⲧⲁⲣⲭⲟⲥ, ϫⲉ “ⲉⲣⲉ-ⲛⲁⲓ ⲥⲙⲟⲛⲧ ⲛ̄ⲧⲉⲓϩⲉ: ⲉⲣⲉ-ⲛⲉⲩϣⲁϫⲉ ⲡⲏϣ ⲉⲡϭⲟⲗ.” ⲁⲩⲱ ⲁϥⲟⲩⲉϩⲥⲁϩⲛⲉ ⲉⲧⲣⲉⲩⲱⲣϫ ⲛ̄ⲙ̄ⲙⲁⲧⲟⲓ ϣⲁⲛⲧⲉϥⲉⲓ ⲉⲡⲧⲁⲫⲟⲥ. ⲛ̄ⲧⲉⲩⲛⲟⲩ ⲇⲉ ⲁϥⲧⲱⲟⲩⲛ ⲙⲛ̄ⲛ̄ⲛⲟϭ ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲙⲛ̄ⲡⲕⲉⲛⲇⲩⲣⲓⲱⲛ ⲙⲛ̄ⲛ̄ⲁⲣⲭⲓⲉⲣⲉⲩⲥ, ⲁⲩⲉⲓ ⲉⲡⲧⲁⲫⲟⲥ ⲁⲩϩⲉ ⲉⲛ̄ⲥⲓⲛⲇⲟⲛⲓⲟⲛ ⲉⲩⲕⲏ ⲉϩⲣⲁⲓ ⲛ̄ⲁⲧⲣⲱⲙⲉ.</p>
+					<p>ⲡⲉϫⲉ-ⲡⲓⲗⲁⲧⲟⲥ, ϫⲉ “ⲱ ⲛ̄ⲣⲱⲙⲉ ⲉⲧⲙⲟⲥⲧⲉ ⲙ̄ⲡⲉⲩⲱⲛϩ ⲙⲁⲩⲁⲁⲩ, ⲉⲛⲉ ⲛ̄ⲧⲁⲩϥⲓ-ⲡⲥⲱⲙⲁ, ⲛⲉⲩⲛⲁϥⲓ ⲛ̄ⲧⲕⲁⲓⲥⲉ ⲛⲙ̄ⲙⲁϥ.” ⲛⲧⲟⲟⲩ ⲇⲉ ⲡⲉϫⲁⲩ, ϫⲉ “ⲛ̄ⲅⲛⲁⲩ ⲁⲛ ⲛⲧⲟⲕ ϫⲉ ⲛ̄ⲛⲟⲩϥ ⲁⲛ ⲛⲉ ⲛⲉⲓⲥⲓⲛⲇⲟⲛⲓⲟⲛ, ⲁⲗⲗⲁ ϩⲉⲛⲁⲗⲗⲟⲧⲣⲓⲟⲥ ⲛⲉ?” ⲡⲓⲗⲁⲧⲟⲥ ⲇⲉ ⲁϥⲣ̄-ⲡⲙⲉⲉⲩⲉ ⲙ̄ⲡϣⲁϫⲉ ⲛ̄ⲓ︤ⲥ︥, ϫⲉ “ϩⲁⲡⲥ ⲡⲉ ⲛ̄ⲧⲉ-ϩⲉⲛⲛⲟϭ ⲛ̄ϣⲡⲏⲣⲉ ϣⲱⲡⲉ ϩⲙ̄ⲡⲁⲧⲁⲫⲟⲥ.” ⲡⲓⲗⲁⲧⲟⲥ ⲇⲉ ⲁϥⲣ̄ϣⲟⲣⲡ ⲛ̄ⲃⲱⲕ ⲉϩⲟⲩⲛ ⲉⲡⲉⲙϩⲁⲁⲩ, ⲁϥϫⲓ ⲛ̄ⲛ̄ⲥⲓⲛⲇⲟⲛⲓⲟⲛ ⲛ̄ⲓ︤ⲥ︥, ⲁϥⲣ̄ϩⲁⲙⲏⲣ ⲙ̄ⲙⲟⲟⲩ, ⲁϥⲣⲓⲙⲉ ⲉϩⲣⲁⲓ ⲉϫⲱⲟⲩ, ⲁϥϯⲡⲓ ⲉⲣⲟⲟⲩ ϩⲁⲡⲣⲁϣⲉ, ϩⲱⲥ ϫⲉ ⲛⲉⲣⲉ-ⲓ︤ⲥ︥ ϭⲗⲙⲗⲱⲙ ⲉⲣⲟⲟⲩ. ⲁⲩⲱ ⲟⲛ ⲁϥϯ-ϩⲧⲏϥ ⲉⲡϩⲉⲕⲁⲧⲟⲛⲧⲁⲣⲭⲟⲥ ⲉϥⲁϩⲉⲣⲁⲧϥ̄ ϩⲙ̄ⲡⲣⲟ ⲙ̄ⲡⲉⲙϩⲁⲁⲩ, ϫⲉ ⲛⲉ-ⲟⲩⲃⲁⲗ ⲛ̄ⲟⲩⲱⲧ ⲡⲉ ⲙ̄ⲙⲟϥ, ϫⲉ ⲛⲉ-ⲁⲩⲡⲗⲏⲅⲏ ⲙ̄ⲡⲉϥⲕⲉⲃⲁⲗ ϩⲙ̄ⲡⲉⲙⲗⲁϩ, ⲉ-ⲁϥϩⲱⲡ ⲛ̄ⲧⲟⲟⲧϥ̄ ⲛ̄ⲟⲩⲟⲉⲓϣ ⲉⲧⲙ̄ⲛⲁⲩ ⲉⲡⲟⲩⲟⲉⲓⲛ ⲛ̄ϩⲏⲧϥ̄. ⲡⲓⲗⲁⲧⲟⲥ ⲇⲉ ⲁ-ⲡⲉⲓ …</p>
+					<p>… ⲥⲙⲛ-ⲗⲟⲓϭⲉ ⲉⲣⲱⲧⲛ̄ ϩⲁⲡⲱⲛϩ ⲙ̄ⲡϫⲟⲉⲓⲥ, ⲁⲗⲗⲁ ⲥⲛⲏⲩ ⲉϫⲛ̄-ⲧⲏⲩⲧⲛ̄ ⲛ̄ϭⲓⲧⲟⲣⲅⲏ ⲙ̄ⲡⲉϥϭⲱⲛⲧ.” ⲛⲧⲟⲟⲩ ⲇⲉ ⲁⲩϯ-ϫⲱⲟⲩ ⲉϩⲟⲩⲛ ϩⲁⲡⲉⲕⲣⲓⲙⲁ, ϫⲉ “ⲡⲉϥⲥⲛⲟϥ ϩⲓϫⲱⲛ ⲙⲛ̄ⲡⲉϥⲙⲟⲩ ϣⲁⲉⲛⲉϩ.”</p>
+					<p>ⲡⲓⲗⲁⲧⲟⲥ ⲇⲉ ⲡⲉϫⲁϥ ⲙ̄ⲡϩⲉⲕⲁⲧⲟⲛⲧⲁⲣⲭⲟⲥ, ϫⲉ “ⲱ ⲡⲁⲥⲟⲛ, ⲙ̄ⲡⲣ̄ϯ ⲙ̄ⲡⲱⲛⲉ ⲙ̄ⲙⲉ, ⲛ̄ⲧⲁⲕϫⲓⲧϥ̄ ⲉⲃⲟⲗ ⲉⲡϫⲓⲛϫⲏ ϩⲁⲡϭⲟⲗ ⲙⲛ̄ⲡⲙⲟⲥⲧⲉ ⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ.” ⲉⲓⲧⲁ ⲁϥⲕⲟⲧϥ̄ … ⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲡⲉϫⲁϥ ⲛⲁⲩ, ϫⲉ “ⲱ ⲛ̄ⲣⲱⲙⲉ … ⲧ … ⲙ̄ⲡⲓⲗⲁⲧⲟⲥ ⲙⲛ̄ⲡϩⲉⲕⲁⲧⲟⲛⲧⲁⲣⲭⲟⲥ ⲉϫⲙ̄ⲡϣⲏⲓ ⲙ̄ⲙⲟⲟⲩ ⲛ̄ⲧⲉϣⲛⲏ, ⲉ-ⲛⲉϥϣⲟⲕϩ ⲉⲙⲁⲧⲉ ⲡⲉ. ⲁⲛⲟⲕ ⲡⲉ, ⲅⲁⲙⲁⲗⲓⲏⲗ, ⲉ-ⲛⲉⲓⲟⲩⲏϩ ⲛ̄ⲥⲱϥ ϩⲱⲱⲧ ϩⲙ̄ⲡⲧⲁⲅⲙⲁ, ⲁⲩⲱ ⲁⲩϭⲱϣⲧ ⲉⲡⲉⲥⲏⲧ ⲉⲡϣⲏⲓ ⲙ̄ⲙⲟⲟⲩ ⲁⲩⲛⲁⲩ ⲉⲡⲉⲧⲙⲟⲟⲩⲧ ⲉϥϭⲗⲙⲗⲱⲙ ⲛ̄ⲥⲁⲟⲩⲥⲁ ϩⲙ̄ⲡϣⲏⲓ. ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲇⲉ ⲁⲩⲱϣ ⲉⲃⲟⲗ, ϫⲉ ‘ⲱ ⲡⲓⲗⲁⲧⲟⲥ, ⲉⲓⲥ-ⲡⲙⲁⲅⲟⲥ ⲛ̄ⲛ … ⲧⲉⲛⲑⲏ … ⲧⲃ …</p>
+					<p>“ⲡⲥⲱⲙⲁ ⲛ̄ⲓ︤ⲥ︥ ⲛ̄ⲧⲁϥⲙⲟⲩ ⲙⲏ ⲡⲁⲓ ⲡⲉ?” ⲛⲧⲟⲟⲩ ⲇⲉ ⲡⲉϫⲁⲩ, ϫⲉ “ⲡⲉⲛϫⲟⲉⲓⲥ, ⲛⲉⲓⲥⲓⲛⲇⲟⲛⲓⲟⲛ ⲉⲧⲧⲁⲗⲏⲩ ⲉⲣⲟⲕ ⲛⲁ-ⲓ︤ⲥ︥ ⲛⲉ, ⲡⲉⲓⲥⲱⲙⲁ ⲇⲉ ⲡⲁⲓ ⲡⲁ-ⲡⲥⲟⲟⲛⲉ ⲡⲉⲛⲧⲁⲩⲥⲧⲁⲩⲣⲟⲩ ⲙ̄ⲙⲟϥ ⲙⲛ̄ⲓ︤ⲥ︥.”</p>
+					<p>ⲡⲙⲏⲏϣⲉ ⲇⲉ ⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲁⲩⲧⲱⲟⲩⲛ ⲉϫⲛ̄ⲓⲱⲥⲏⲫ ⲙⲛ̄ⲛⲓⲕⲟⲇⲩⲙⲟⲥ, ⲉⲩⲟⲩⲱϣ ⲉⲛⲟϫⲟⲩ ⲉⲡⲉⲥⲏⲧ ⲉⲡϣⲏⲓ … ⲩϫ ⲉⲧⲱⲛ … ⲡⲓⲗⲁ … ⲙ …</p>
+					<p>… ⲧⲁ-ⲓ︤ⲥ︥ ϫⲟⲟⲩ ⲛⲁϥ, ϫⲉ “ⲉⲣⲉ-ⲛⲉⲧⲙⲟⲟⲩⲧ ⲛⲁⲧⲱⲟⲩⲛ ϩⲙ̄ⲡⲁⲧⲁⲫⲟⲥ.” ⲉⲧⲃⲉⲡⲁⲓ ⲁϥⲙⲟⲩⲧⲉ ⲉⲛ̄ⲛⲟϭ ⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲡⲉϫⲁϥ ⲛⲁⲩ, ϫⲉ “ⲉⲧⲉⲧⲛ̄ⲡⲓⲥⲧⲉⲩⲉ ⲣⲱ ϫⲉ ⲡⲁⲓ ⲡⲉ ⲡⲛⲁⲍⲱⲣⲁⲓⲟⲥ?” ⲡⲉϫⲁⲩ ⲛⲁϥ, ϫⲉ “ⲧⲛ̄ⲡⲓⲥⲧⲉⲩⲉ.” ⲡⲉϫⲁϥ ⲛⲁⲩ, ϫⲉ “ⲥⲡⲣⲉⲡⲉⲓ ⲉⲕⲱ ⲙ̄ⲡⲉϥⲥⲱⲙⲁ ϩⲙ̄ⲡⲉϥⲧⲁⲫⲟⲥ ⲛ̄ⲧⲉϥϩⲏ ⲛ̄ⲧϩⲉ ⲛ̄ⲛⲉⲧⲙⲟⲟⲩⲧ ⲧⲏⲣⲟⲩ.” ⲛ̄ⲧⲉⲓϩⲉ ⲇⲉ, ⲁϥⲙⲟⲩⲧⲉ ⲉⲓⲱⲥⲏⲫ ⲙⲛ̄ⲛⲉⲓⲕⲱⲇⲏⲙⲟⲥ ⲛ̄ⲕⲉⲥⲟⲡ ⲡⲉϫⲁϥ ⲛⲁⲩ … ⲛ … ⲧ …</p>
 				</div>
 				<div class="my_translation">
 					
@@ -124,6 +128,16 @@
 				</div>
 			</div>
 			<div class="work">
+				<div class="normalized_text coptic">
+					<p>ⲁ-ⲡⲥⲱⲧⲏⲣ ⲛⲟϫϥ̄ ⲙⲛ̄ⲡⲙⲛⲧⲥⲛⲟⲟⲩⲥ ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ. ⲛⲉⲣⲉ-ⲧⲉⲧⲣⲁⲡⲉⲍⲁ ⲕⲏ ϩⲁⲣⲟⲟⲩ. ⲉⲣϣⲁⲛ-ⲡⲥⲱⲧⲏⲣ ⲥⲟⲟⲩⲧⲛ ⲉⲩϭⲓⲛⲟⲩⲱⲙ, ϣⲁⲣⲉ-ⲧⲉⲧⲣⲁⲡⲉⲍⲁ ⲕⲱⲧⲉ ϫⲉ ⲉⲩⲉϫⲉ-ⲧⲟⲟⲧⲟⲩ ⲧⲏⲣⲟⲩ ⲉⲡⲉⲛⲧⲁ-ⲡⲥⲱⲧⲏⲣ ⲟⲩⲱⲙ ⲛ̄ϩⲏⲧϥ̄ ⲁϥⲥⲙⲟⲩ ⲉⲣⲟϥ.</p>
+					<p>ⲁ-ⲙⲁⲑⲓⲁⲥ ⲕⲱ ⲉϩⲣⲁⲓ ⲛ̄ⲟⲩⲡⲓⲛⲁⲝ ⲉⲣⲉ-ⲟⲩⲁⲗⲉⲕⲧⲱⲣ ϩⲓϫⲱϥ. ⲉⲣⲉ-ⲟⲩϩⲙⲟⲩ ϩⲓϫⲛ̄ⲧⲉⲧⲣⲁⲡⲉⲍⲁ. ⲁ-ⲡⲥⲱⲧⲏⲣ ⲥⲟⲟⲩⲧⲛ ⲉⲃⲟⲗ ⲉⲟⲩⲱⲙ ϩⲙ̄ⲡⲉϩⲙⲟⲩ ⲛ̄ϣⲟⲣⲡ. ⲁ-ⲧⲉⲧⲣⲁⲡⲉⲍⲁ ⲕⲱⲧⲉ, ⲁ-ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ ϫⲓ ⲛ̄ϩⲏⲧϥ̄. ⲡⲉϫⲉ-ⲙⲁⲑⲓⲁⲥ ⲛ̄ⲓ︤ⲥ︥, ϫⲉ “ϩⲣⲁⲃⲃⲉⲓ, ⲕⲛⲁⲩ ⲉⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ? ⲛ̄ⲧⲉⲣⲉ-ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲛⲁⲩ ⲉⲣⲟⲓ ⲉⲓⲛⲁϣⲁⲁⲧϥ̄, ⲡⲉϫⲁⲩ ⲛⲁⲓ, ϫⲉ ‘ⲥⲉⲛⲁⲡⲱϩⲧ ⲉⲃⲟⲗ ⲙ̄ⲡⲉⲥⲛⲟϥ ⲙ̄ⲡⲉⲧⲛ̄ⲥⲁϩ ⲛ̄ⲧϩⲉ ⲙ̄ⲡⲁ-ⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ.’” ⲓ︤ⲥ︥ ⲇⲉ ⲁϥⲛⲉⲧϥ-ⲣⲱϥ ⲛ̄ⲥⲱⲃⲉ ⲡⲉϫⲁϥ, ϫⲉ “ⲱ ⲙⲁⲑⲓⲁⲥ, ⲡϣⲁϫⲉ ⲛ̄ⲧⲁⲩϫⲟⲟϥ ⲥⲉⲛⲁⲁⲁϥ. ⲉⲣⲉ-ⲡⲁⲗⲉⲕⲧⲱⲣ ⲅⲁⲣ ⲥⲏⲙⲁⲛⲉ ϩⲓⲧϩⲏ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ ⲉϥⲛⲁϣⲁ. ⲡⲧⲩⲡⲟⲥ ⲡⲉ ⲛ̄ⲓⲱϩⲁⲛⲛⲏⲥ ⲡⲃⲁⲡⲧⲓⲥⲧⲏⲥ ⲉϥⲕⲏⲣⲩⲥⲥⲉ ϩⲁⲧⲁϩⲏ. ⲁⲛⲟⲕ ⲡⲉ ⲡⲟⲩⲟⲉⲓⲛ ⲙ̄ⲙⲉ, ⲉ-ⲙⲛ̄-ⲕⲁⲕⲉ ⲛ̄ϩⲏⲧϥ̄. ⲉϣϫⲉ ⲁ-ⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ ⲙⲟⲩ, ⲉⲩϫⲱ ⲙ̄ⲙⲟⲥ ⲉⲣⲟⲓ ϫⲉ ϯⲛⲁⲙⲟⲩ ϩⲱ, ⲉ-ⲁ-ⲙⲁⲣⲓⲁ ϫⲡⲟⲓ ⲉⲃⲟⲗ ϩⲛ̄ⲧⲉⲥⲙⲏⲧⲣⲁ, ⲉ-ⲛⲉⲓϩⲛ̄ⲧⲉⲥⲕⲁⲗⲁϩⲏ ⲡⲉ ⲙⲛ̄ⲛⲉⲭⲉⲣⲟⲩⲃⲓⲛ ⲙⲛ̄ⲛⲉⲥⲉⲣⲁⲫⲓⲛ. ⲁⲛⲟⲕ ⲇⲉ ⲁⲓⲉⲓ ⲉⲃⲟⲗ ϩⲛ̄ⲧⲡⲉ</p>
+					<p></p>
+					<p></p>
+					<p></p>
+					<p></p>
+					<p></p>
+					<p></p>
+				</div>
 				<div class="my_translation"></div>
 					<h2>III. Évangile (?) Apocryphe.</h2>
 				<div class="source_translation">
