--- a/coptic/wip/index.html
+++ b/coptic/wip/index.html
@@ -128,18 +128,25 @@
 				</div>
 			</div>
 			<div class="work">
+				<h2>III. Évangile (?) Apocryphe.</h2>
 				<div class="normalized_text coptic">
 					<p>ⲁ-ⲡⲥⲱⲧⲏⲣ ⲛⲟϫϥ̄ ⲙⲛ̄ⲡⲙⲛⲧⲥⲛⲟⲟⲩⲥ ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ. ⲛⲉⲣⲉ-ⲧⲉⲧⲣⲁⲡⲉⲍⲁ ⲕⲏ ϩⲁⲣⲟⲟⲩ. ⲉⲣϣⲁⲛ-ⲡⲥⲱⲧⲏⲣ ⲥⲟⲟⲩⲧⲛ ⲉⲩϭⲓⲛⲟⲩⲱⲙ, ϣⲁⲣⲉ-ⲧⲉⲧⲣⲁⲡⲉⲍⲁ ⲕⲱⲧⲉ ϫⲉ ⲉⲩⲉϫⲉ-ⲧⲟⲟⲧⲟⲩ ⲧⲏⲣⲟⲩ ⲉⲡⲉⲛⲧⲁ-ⲡⲥⲱⲧⲏⲣ ⲟⲩⲱⲙ ⲛ̄ϩⲏⲧϥ̄ ⲁϥⲥⲙⲟⲩ ⲉⲣⲟϥ.</p>
-					<p>ⲁ-ⲙⲁⲑⲓⲁⲥ ⲕⲱ ⲉϩⲣⲁⲓ ⲛ̄ⲟⲩⲡⲓⲛⲁⲝ ⲉⲣⲉ-ⲟⲩⲁⲗⲉⲕⲧⲱⲣ ϩⲓϫⲱϥ. ⲉⲣⲉ-ⲟⲩϩⲙⲟⲩ ϩⲓϫⲛ̄ⲧⲉⲧⲣⲁⲡⲉⲍⲁ. ⲁ-ⲡⲥⲱⲧⲏⲣ ⲥⲟⲟⲩⲧⲛ ⲉⲃⲟⲗ ⲉⲟⲩⲱⲙ ϩⲙ̄ⲡⲉϩⲙⲟⲩ ⲛ̄ϣⲟⲣⲡ. ⲁ-ⲧⲉⲧⲣⲁⲡⲉⲍⲁ ⲕⲱⲧⲉ, ⲁ-ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ ϫⲓ ⲛ̄ϩⲏⲧϥ̄. ⲡⲉϫⲉ-ⲙⲁⲑⲓⲁⲥ ⲛ̄ⲓ︤ⲥ︥, ϫⲉ “ϩⲣⲁⲃⲃⲉⲓ, ⲕⲛⲁⲩ ⲉⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ? ⲛ̄ⲧⲉⲣⲉ-ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲛⲁⲩ ⲉⲣⲟⲓ ⲉⲓⲛⲁϣⲁⲁⲧϥ̄, ⲡⲉϫⲁⲩ ⲛⲁⲓ, ϫⲉ ‘ⲥⲉⲛⲁⲡⲱϩⲧ ⲉⲃⲟⲗ ⲙ̄ⲡⲉⲥⲛⲟϥ ⲙ̄ⲡⲉⲧⲛ̄ⲥⲁϩ ⲛ̄ⲧϩⲉ ⲙ̄ⲡⲁ-ⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ.’” ⲓ︤ⲥ︥ ⲇⲉ ⲁϥⲛⲉⲧϥ-ⲣⲱϥ ⲛ̄ⲥⲱⲃⲉ ⲡⲉϫⲁϥ, ϫⲉ “ⲱ ⲙⲁⲑⲓⲁⲥ, ⲡϣⲁϫⲉ ⲛ̄ⲧⲁⲩϫⲟⲟϥ ⲥⲉⲛⲁⲁⲁϥ. ⲉⲣⲉ-ⲡⲁⲗⲉⲕⲧⲱⲣ ⲅⲁⲣ ⲥⲏⲙⲁⲛⲉ ϩⲓⲧϩⲏ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ ⲉϥⲛⲁϣⲁ. ⲡⲧⲩⲡⲟⲥ ⲡⲉ ⲛ̄ⲓⲱϩⲁⲛⲛⲏⲥ ⲡⲃⲁⲡⲧⲓⲥⲧⲏⲥ ⲉϥⲕⲏⲣⲩⲥⲥⲉ ϩⲁⲧⲁϩⲏ. ⲁⲛⲟⲕ ⲡⲉ ⲡⲟⲩⲟⲉⲓⲛ ⲙ̄ⲙⲉ, ⲉ-ⲙⲛ̄-ⲕⲁⲕⲉ ⲛ̄ϩⲏⲧϥ̄. ⲉϣϫⲉ ⲁ-ⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ ⲙⲟⲩ, ⲉⲩϫⲱ ⲙ̄ⲙⲟⲥ ⲉⲣⲟⲓ ϫⲉ ϯⲛⲁⲙⲟⲩ ϩⲱ, ⲉ-ⲁ-ⲙⲁⲣⲓⲁ ϫⲡⲟⲓ ⲉⲃⲟⲗ ϩⲛ̄ⲧⲉⲥⲙⲏⲧⲣⲁ, ⲉ-ⲛⲉⲓϩⲛ̄ⲧⲉⲥⲕⲁⲗⲁϩⲏ ⲡⲉ ⲙⲛ̄ⲛⲉⲭⲉⲣⲟⲩⲃⲓⲛ ⲙⲛ̄ⲛⲉⲥⲉⲣⲁⲫⲓⲛ. ⲁⲛⲟⲕ ⲇⲉ ⲁⲓⲉⲓ ⲉⲃⲟⲗ ϩⲛ̄ⲧⲡⲉ</p>
-					<p></p>
-					<p></p>
-					<p></p>
-					<p></p>
-					<p></p>
-					<p></p>
+					<p>ⲁ-ⲙⲁⲑⲓⲁⲥ ⲕⲱ ⲉϩⲣⲁⲓ ⲛ̄ⲟⲩⲡⲓⲛⲁⲝ ⲉⲣⲉ-ⲟⲩⲁⲗⲉⲕⲧⲱⲣ ϩⲓϫⲱϥ. ⲉⲣⲉ-ⲟⲩϩⲙⲟⲩ ϩⲓϫⲛ̄ⲧⲉⲧⲣⲁⲡⲉⲍⲁ. ⲁ-ⲡⲥⲱⲧⲏⲣ ⲥⲟⲟⲩⲧⲛ ⲉⲃⲟⲗ ⲉⲟⲩⲱⲙ ϩⲙ̄ⲡⲉϩⲙⲟⲩ ⲛ̄ϣⲟⲣⲡ. ⲁ-ⲧⲉⲧⲣⲁⲡⲉⲍⲁ ⲕⲱⲧⲉ, ⲁ-ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ ϫⲓ ⲛ̄ϩⲏⲧϥ̄. ⲡⲉϫⲉ-ⲙⲁⲑⲓⲁⲥ ⲛ̄ⲓ︤ⲥ︥, ϫⲉ “ϩⲣⲁⲃⲃⲉⲓ, ⲕⲛⲁⲩ ⲉⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ? ⲛ̄ⲧⲉⲣⲉ-ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲛⲁⲩ ⲉⲣⲟⲓ ⲉⲓⲛⲁϣⲁⲁⲧϥ̄, ⲡⲉϫⲁⲩ ⲛⲁⲓ, ϫⲉ ‘ⲥⲉⲛⲁⲡⲱϩⲧ ⲉⲃⲟⲗ ⲙ̄ⲡⲉⲥⲛⲟϥ ⲙ̄ⲡⲉⲧⲛ̄ⲥⲁϩ ⲛ̄ⲧϩⲉ ⲙ̄ⲡⲁ-ⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ.’” ⲓ︤ⲥ︥ ⲇⲉ ⲁϥⲛⲉⲧϥ-ⲣⲱϥ ⲛ̄ⲥⲱⲃⲉ ⲡⲉϫⲁϥ, ϫⲉ “ⲱ ⲙⲁⲑⲓⲁⲥ, ⲡϣⲁϫⲉ ⲛ̄ⲧⲁⲩϫⲟⲟϥ ⲥⲉⲛⲁⲁⲁϥ. ⲉⲣⲉ-ⲡⲁⲗⲉⲕⲧⲱⲣ ⲅⲁⲣ ⲥⲏⲙⲁⲛⲉ ϩⲓⲧϩⲏ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ ⲉϥⲛⲁϣⲁ. ⲡⲧⲩⲡⲟⲥ ⲡⲉ ⲛ̄ⲓⲱϩⲁⲛⲛⲏⲥ ⲡⲃⲁⲡⲧⲓⲥⲧⲏⲥ ⲉϥⲕⲏⲣⲩⲥⲥⲉ ϩⲁⲧⲁϩⲏ. ⲁⲛⲟⲕ ⲡⲉ ⲡⲟⲩⲟⲉⲓⲛ ⲙ̄ⲙⲉ, ⲉ-ⲙⲛ̄-ⲕⲁⲕⲉ ⲛ̄ϩⲏⲧϥ̄. ⲉϣϫⲉ ⲁ-ⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ ⲙⲟⲩ, ⲉⲩϫⲱ ⲙ̄ⲙⲟⲥ ⲉⲣⲟⲓ ϫⲉ ϯⲛⲁⲙⲟⲩ ϩⲱ, ⲉ-ⲁ-ⲙⲁⲣⲓⲁ ϫⲡⲟⲓ ⲉⲃⲟⲗ ϩⲛ̄ⲧⲉⲥⲙⲏⲧⲣⲁ, ⲉ-ⲛⲉⲓϩⲛ̄ⲧⲉⲥⲕⲁⲗⲁϩⲏ ⲡⲉ ⲙⲛ̄ⲛⲉⲭⲉⲣⲟⲩⲃⲓⲛ ⲙⲛ̄ⲛⲉⲥⲉⲣⲁⲫⲓⲛ. ⲁⲛⲟⲕ ⲇⲉ ⲁⲓⲉⲓ ⲉⲃⲟⲗ ϩⲛ̄ⲧⲡⲉ ⲛ̄ⲙ̄ⲡⲏⲩⲉ ⲉϩⲣⲁⲓ ⲉϫⲙ̄ⲡⲕⲁϩ, ⲛⲉϣⲧⲉ-ⲡⲕⲁϩ ϣ̄ϥⲓ ϩⲁⲡⲁⲉⲟⲟⲩ, ⲁⲓⲣ̄ⲣⲱⲙⲉ ⲉⲧⲃⲉ-ⲧⲏⲩⲧⲛ̄. ⲧⲉⲛⲟⲩ ϭⲉ ⲡⲉⲓⲁⲗⲉⲕⲧⲱⲣ ⲛⲁⲧⲱⲟⲩⲛ.” ⲁ-ⲓ︤ⲥ︥ ⲇⲉ ϫⲱϩ ⲉⲡⲁⲗⲉⲕⲧⲱⲣ ⲡⲉϫⲁϥ ⲛⲁϥ, ϫⲉ “ⲉⲓϫⲉⲣⲟⲕ ⲛⲧⲟⲕ, ⲱ ⲡⲁⲗⲉⲕⲧⲱⲣ, ⲉⲕⲉⲱⲛϩ ⲛ̄ⲧⲉⲕϩⲉ, ⲛ̄ⲧⲉ-ϩⲉⲛⲧⲛϩ ⲣⲱⲧ ⲉⲣⲟⲕ, ⲛ̄ⲅϩⲱⲗ ⲉⲡⲁⲏⲣ, ϫⲉⲕⲁⲁⲥ ⲉⲕⲉⲥⲏⲙⲁⲛⲉ ⲙ̄ⲡⲉϩⲟⲟⲩ ⲉⲧⲟⲩⲛⲁⲡⲁⲣⲁⲇⲓⲇⲟⲩ ⲙ̄ⲙⲟⲓ ⲛ̄ϩⲏⲧϥ̄.” ⲁⲩⲱ ⲁϥϥⲟϭϥ̄ ⲉϩⲣⲁⲓ ⲛ̄ϭⲓⲡⲁⲗⲉⲕⲧⲱⲣ ϩⲓϫⲙ̄ⲡⲓⲛⲁⲝ, ⲁϥⲃⲱⲗ ⲉⲃⲟⲗ. ⲡⲉϫⲉ-ⲓ︤ⲥ︥ ⲙ̄ⲙⲁⲑⲓⲁⲥ, ϫⲉ “ⲉⲓⲥ-ⲡϩⲁⲗⲏⲧ ⲛ̄ⲧⲁⲕϣⲁⲁⲧϥ̄ ϩⲁⲧϩⲏ ⲛ̄ϣⲟⲙⲧⲉ ⲛ̄ⲟⲩⲛⲟⲩ ⲁϥⲧⲱⲟⲩⲛ ⲉϥⲟⲛϩ. ⲥⲉⲛⲁⲥⲧⲁⲩⲣⲟⲩ ⲅⲁⲣ ⲙ̄ⲙⲟⲓ, ⲁⲩⲱ ⲡⲁⲥⲛⲟϥ ⲛⲁϣⲱⲡⲉ ⲛ̄ⲟⲩⲟⲩϫⲁⲓ ⲛ̄ⲛⲉϩⲉⲑⲛⲟⲥ …</p>
+					<p>ⲙ̄ⲙⲟⲟⲩ … ⲇⲁⲓ ⲛ̄ⲙ … ⲧⲉ ⲉϥϩⲁⲣϣϩⲏⲧ ⲉϩⲣⲁⲓ ⲉϫⲱⲟⲩ, ϫⲉ ⲟⲩϩⲁⲣϣϩⲏⲧ ⲛ̄ⲛⲁⲓ ⲓ︤ⲥ︥ ⲡⲉ, ⲉϥⲥⲟⲟⲩⲛ ϫⲉ ⲥⲉⲛⲏⲩ ⲉⲛⲉϥϭⲓϫ ⲛ̄ϥϯϩⲁⲡ ⲉⲣⲟⲟⲩ.</p>
+					<p>ⲉⲓⲥ-ⲟⲩⲣⲱⲙⲉ ⲇⲉ ⲉⲃⲟⲗ ϩⲙ̄ⲡⲙⲏⲏϣⲉ, ⲉ-ⲡⲉϥⲣⲁⲛ ⲡⲉ ⲁⲛⲁⲛⲓⲁⲥ, ⲉ-ⲟⲩⲣⲙⲃⲏⲑⲗⲉⲉⲙ ⲡⲉ, ⲧⲡⲟⲗⲓⲥ ⲛ̄ⲇⲁⲩⲉⲓⲇ. ⲁϥϥⲱϭⲉ ⲇⲉ ⲉϩⲟⲩⲛ ⲉⲡⲉⲥⲧⲁⲩⲣⲟⲥ ⲛ̄ⲓ︤ⲥ︥, ⲁϥϩⲱⲗϭ ⲉϩⲟⲩⲛ ⲉⲣⲟϥ, ⲁϥⲕⲁ-ⲛⲉϥϭⲓϫ ⲉϫⲛ̄ⲛⲉϭⲓϫ ⲙ̄ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ, ⲁϥⲧⲉϭ-ϩⲏⲧϥ̄ ⲉϩⲟⲩⲛ ⲉϩⲏⲧϥ̄ ⲉⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ, ⲁϥⲧⲉϭ-ⲛⲉϥⲟⲩⲉⲣⲏⲧⲉ ⲉϩⲟⲩⲛ ⲉⲛ̄ⲟⲩⲉⲣⲏⲧⲉ ⲙ̄ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ, ⲁϥⲁⲥⲡⲁⲍⲉ ⲛ̄ⲛⲉⲟⲩⲉⲣⲏⲧⲉ ⲛ̄ⲓ︤ⲥ︥, ⲁϥⲁⲥⲡⲁⲍⲉ ⲛ̄ⲛⲉϭⲓϫ ⲛ̄ⲓ︤ⲥ︥, ⲁϥⲁⲥⲡⲁⲍⲉ ⲛ̄ⲧⲧⲁⲡⲣⲟ ⲛ̄ⲓ︤ⲥ︥, ⲁϥⲁⲥⲡⲁⲍⲉ ⲙ̄ⲡⲥⲡⲓⲣ ⲛ̄ⲓ︤ⲥ︥ ⲡⲉⲛⲧⲁⲩⲕⲟⲟⲛⲥϥ̄ ⲉⲧⲃⲉⲡⲉⲛⲟⲩϫⲁⲓ ⲧⲏⲣⲛ̄, ⲁϥⲁⲥⲡⲁⲍⲉ ⲛ̄ⲛⲉⲙⲉⲗⲟⲥ ⲙ̄ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ, ⲁϥⲱϣ ⲉⲃⲟⲗ ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲱ ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲙ̄ⲡⲗⲁⲛⲟⲥ ⲁⲩⲱ ⲛ̄ⲁⲧⲛⲟⲩⲧⲉ, ⲙⲟⲟⲩⲧ ⲛⲏⲧⲛ̄, ⲙ̄ⲡⲣ̄ⲙⲟⲩⲟⲩⲧ ⲙ̄ⲡⲁϫⲟⲉⲓⲥ. ϩⲓⲱⲛⲉ ⲉⲣⲟⲓ, ⲙ̄ⲡⲣ̄ϩⲓⲱⲛⲉ ⲉⲡⲁϫⲟⲉⲓⲥ. ⲥⲧⲁⲩⲣⲟⲩ ⲙ̄ⲙⲟⲓ, ⲙ̄ⲡⲣ̄ⲥⲧⲁⲩⲣⲟⲩ ⲙ̄ⲡⲁϫⲟⲉⲓⲥ, ϫⲉ ⲡⲁϫⲟⲉⲓⲥ ⲡⲉ ⲓ︤ⲥ︥, ⲁⲩⲱ ⲡⲁⲛⲟⲩⲧⲉ ⲡⲉ ⲡⲉⲭ︤ⲥ︥.”</p>
+					<p>ⲛⲁⲓ ⲇⲉ ⲛ̄ⲧⲉⲣⲉϥϫⲟⲟⲩ, ⲁⲩⲥⲙⲏ ⲉⲓ ⲉⲃⲟⲗ ϩⲙ̄ⲡⲥⲱⲙⲁ ⲙ̄ⲡⲥⲱⲧⲏⲣ ϩⲓϫⲙ̄ⲡⲉⲥⲧⲁⲩⲣⲟⲥ, ⲉⲥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲁⲛⲁⲛⲓⲁⲥ, ⲁⲛⲁⲛⲓⲁⲥ. ⲛ̄ⲛⲉ-ⲧⲉⲕⲯⲩⲭⲏ ⲃⲱⲕ ⲉⲁⲙⲛⲧⲉ. ⲛ̄ⲛⲉ-ⲡⲉⲕⲥⲱⲙⲁ ⲣ̄ⲥⲧⲟⲓ ⲛ̄ⲣⲉϥⲙⲟⲟⲩⲧ. ⲛ̄ⲛⲉ-ⲡⲙⲟⲩ ϭⲙϭⲟⲙ ⲉⲡⲉⲕⲥⲱⲙⲁ. ⲉⲩⲉⲥϩⲁⲓ ⲙ̄ⲡⲉⲕⲣⲁⲛ ⲉⲙ̄ⲡⲩⲗⲏ ⲛ̄ⲙ̄ⲡⲏⲩⲉ, ⲛ̄ⲥⲉⲙⲟⲩⲧⲉ ⲉⲣⲟⲕ ϩⲛ̄ⲙ̄ⲡⲏⲩⲉ ϫⲉ ⲧⲁⲡⲁⲣⲭⲏ ⲙ̄ⲡⲕⲁⲣⲡⲟⲥ ⲛ̄ⲁⲧⲙⲟⲩ.” ⲛⲁⲓ ⲇⲉ ⲉⲣⲉ-ⲡⲥⲱⲙⲁ ⲙ̄ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ ϫⲱ ⲙ̄ⲙⲟⲟⲩ ⲉϥⲧⲁⲗⲏⲩ ⲉⲡⲉⲥⲧⲁⲩⲣⲟⲥ.</p>
+					<p>ⲛ̄ⲁⲣⲭⲓⲉⲣⲉⲩⲥ ⲇⲉ ⲟⲛ ⲛⲉⲩⲙⲏⲛ ⲉⲃⲟⲗ ϩⲙ̄ⲡⲉⲩϩⲏⲧ ⲉⲩϩⲓⲱⲛⲉ ⲉⲡⲣⲱⲙⲉ. ⲡϩⲗⲗⲟ ⲇⲉ ⲙ̄ⲙⲁⲕⲁⲣⲓⲟⲥ ⲁⲡⲁ ⲁⲛⲁⲛⲓⲁⲥ ⲁϥⲟⲩⲱⲛ ⲛ̄ⲣⲱϥ ⲡⲉϫⲁϥ ⲡⲉϥⲥⲙⲟⲩ ⲉⲡⲛⲟⲩⲧⲉ, ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲁ-ⲡⲁϩⲏⲧ ⲟⲩⲛⲟϥ ϩⲙ̄ⲡⲉⲥϯⲛⲟⲩϥⲉ ⲙ̄ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ. ⲁ-ⲡⲟⲩⲟⲉⲓⲛ ⲙ̄ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ ⲣ̄ⲟⲩⲟⲉⲓⲛ ⲉⲧⲁⲯⲩⲭⲏ ⲙⲛ̄ⲡⲁⲥⲱⲙⲁ. ⲁⲓⲟⲩⲛⲟϥ. ⲡⲉⲟⲟⲩ ⲙ̄ⲡⲉⲓⲱⲧ, ⲙⲛ̄ⲡⲉϥⲡ︤ⲛ︦ⲁ︥ ⲉⲧⲟⲩⲁⲁⲃ, ϣⲁⲉⲛⲉϩ ⲛ̄ⲉⲛⲉϩ. ϩⲁⲙⲏⲛ.” ⲛ̄ⲁⲣⲭⲓⲉⲣⲉⲩⲥ ⲇⲉ ⲛ̄ⲧⲉⲣⲟⲩϭⲱ ⲉⲩϩⲓⲱⲛⲉ ⲉⲡⲣⲱⲙⲉ, ⲙ̄ⲡⲉϥⲙⲟⲩ, ⲁⲩⲕⲉⲗⲉⲩⲉ ⲉⲣⲟⲕϩϥ̄ ⲉϥⲟⲛϩ.</p>
+					<p>ⲛ̄ⲧⲉⲣⲟⲩϫⲉⲣⲟ ⲇⲉ ⲛ̄ⲧⲕⲁⲙⲓⲛⲟⲥ ⲛ̄ⲕⲱϩⲧ, ⲡⲕ … ⲙⲡⲉ … ⲉⲡ … ⲉϥ … ⲟ …</p>
+					<p>ⲛ … ⲡⲟⲥⲧⲟⲗⲟⲥ ⲓⲟⲩⲇⲁⲥ … ⲃⲟⲗⲟⲥ ⲡⲱⲧ ⲉϩⲟⲩⲛ ⲉⲣⲟϥ. ⲁϥⲉⲓ ⲉⲃⲟⲗ ⲁϥⲡⲱⲧ ϣⲁⲛ̄ⲁⲣⲭⲓⲉⲣⲉⲩⲥ, ⲡⲉϫⲁϥ ⲛⲁⲩ, ϫⲉ “ⲟⲩ ⲡⲉⲧⲉⲧⲛ̄ⲛⲁⲧⲁⲁϥ ⲛⲁⲓ, ⲧⲁⲡⲁⲣⲁⲇⲓⲇⲟⲩ ⲙ̄ⲙⲟϥ ⲛⲏⲧⲛ̄?” ⲁⲩⲱ ⲁⲩϯ ⲛⲁϥ ⲙ̄ⲙⲁⲁⲃ ⲛ̄ϩⲁⲧ.</p>
+					<p>ⲧⲉⲥϩⲓⲙⲉ ⲇⲉ ⲛ̄ⲓⲟⲩⲇⲁⲥ ⲁⲥϫⲓ ⲙ̄ⲡϣⲏⲣⲉ ⲛ̄ⲓⲱⲥⲏⲫ ⲡⲁ-ⲁⲣⲓⲙⲁⲑⲉⲁ ⲉⲥⲁⲛⲟⲩϣϥ̄. ϩⲙ̄ⲡⲉϩⲟⲟⲩ ⲇⲉ ϩⲱⲱϥ ⲛ̄ⲧⲁ-ⲡⲉⲃⲓⲏⲛ ⲓⲟⲩⲇⲁⲥ ϫⲓ ⲙ̄ⲡⲙⲁⲁⲃ ⲛ̄ϩⲁⲧ ⲛ̄ⲧⲟⲟⲧⲟⲩ ⲛ̄ⲛ̄ⲓⲟⲩⲇⲁⲓ ⲁϥϫⲓⲧⲟⲩ ⲉϩⲟⲩⲛ ⲉⲡⲉϥⲏⲓ, ⲙ̄ⲡⲉ-ⲡϣⲏⲣⲉ … “ⲓⲱⲥⲏⲫ … ⲡⲉⲕϣⲏⲣⲉ … ϩⲛ̄ⲧⲁⲣϣ … ⲛ̄ⲧⲉⲥϩⲓⲙⲉ ⲛ̄ⲓⲟⲩⲇⲁⲥ ⲙ̄ …” ⲁϥⲉⲓ ⲉϩⲣⲁⲓ … ⲓⲱⲥⲏⲫ … ⲛⲁⲩ ⲛ … ⲉϥⲗⲩⲡⲉⲓ … ⲡⲉϥϣⲏⲣⲉ. ⲛ̄ⲧⲉⲣⲉ-ⲡϣⲏⲣⲉ ⲕⲟⲩⲓ ⲛⲁⲩ ⲉⲡⲉϥⲉⲓⲱⲧ (ⲉ-ⲛⲉϥϩⲛ̄ⲥⲁϣϥ ⲅⲁⲣ ⲛ̄ⲉⲃⲟⲧ ⲡⲉ), ⲁϥⲱϣ ⲉⲃⲟⲗ ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲡⲁⲉⲓⲱⲧ, ⲁⲙⲟⲩ ⲛ̄ⲅϥⲓⲧ ⲛ̄ⲧⲟⲟⲧϥ̄ ⲛ̄ⲧⲉⲓⲥϩⲓⲙⲉ ⲛ̄ⲑⲏⲣⲓⲟⲛ, ϫⲉ ⲛ̄ϫⲓⲛⲡⲛⲁⲩ ⲛ̄ϫⲡ-ⲯⲓⲧⲉ ⲛ̄ⲥⲁϥ ⲛ̄ⲧⲁⲩϫⲓ ⲛ̄ⲧϯ … ϣ … ⲛ̄ϩⲏⲧⲥ̄ … ⲧⲏⲣⲟⲩ.” ⲛⲁⲓ ⲇⲉ ⲛ̄ⲧⲉⲣⲉϥϫⲟⲟⲩ, ⲁϥϫⲓ ⲙ̄ⲙⲟϥ ⲛ̄ϭⲓⲡⲉϥⲉⲓⲱⲧ ⲁϥⲃⲱⲕ ⲉⲃⲟⲗ.</p>
+					<p>ⲓⲟⲩⲇⲁⲥ ϩⲱⲱϥ ⲁϥϫⲓ ⲛ̄ϩⲉⲛϩⲩⲡⲏⲣⲉⲧⲏⲥ ⲙⲛ̄ϩⲉⲛⲕⲟⲟⲩⲉ ⲛ̄ⲧⲉⲡⲗⲁⲟⲥ, ⲁⲩϭⲱⲡⲉ ⲛ̄ⲓ︤ⲥ︥ ⲁⲩⲉⲓⲛⲉ ⲙ̄ⲙⲟϥ ⲙ̄ⲡϩⲏⲅⲉⲙⲱⲛ.</p>
+					<p>ⲡⲉϫⲉ-ⲡⲓⲗⲁⲧⲟⲥ ⲛⲁⲩ, ϫⲉ “ⲟⲩ ⲡⲉⲧⲉⲧⲛ̄ⲟⲩⲱϣ ⲧⲁⲁϥ ⲛⲁϥ?” ⲡⲉϫⲁⲩ ⲛⲁϥ, ϫⲉ “ⲥⲧⲁⲩⲣⲟⲩ ⲙ̄ⲙⲟϥ.” ⲁⲩⲱ ⲛ̄ⲧⲉⲣⲟⲩⲉⲓ ⲉⲡⲙⲁ ⲉⲩⲛⲁⲥⲧⲁⲩⲣⲟⲩ ⲙ̄ⲙⲟϥ ⲛ̄ϩⲏⲧϥ̄, ⲁⲩⲕⲁⲁϥ ⲕⲁϩⲏⲩ … ⲓⲟⲛ … ⲥ, ⲁⲩϣⲱⲧ ⲛ̄ⲟⲩⲕⲗⲟⲙ ⲉⲃⲟⲗ ϩⲛ̄ⲛ̄ϣⲟⲛⲧⲉ, ⲁⲩⲕⲁⲁϥ ϩⲓϫⲛ̄ⲧⲉϥⲁⲡⲉ. ⲁⲩϯ ⲛ̄ⲟⲩⲕⲁϣ ⲉⲧⲉϥϭⲓϫ ⲛ̄ⲟⲩⲛⲁⲙ. ⲁⲩⲉⲓϣⲉ ⲛ̄ⲕⲉⲥⲟⲟⲛⲉ ⲥⲛⲁⲩ ⲛⲙ̄ⲙⲁϥ, ⲟⲩⲁ ϩⲓⲟⲩⲛⲁⲙ ⲙ̄ⲙⲟϥ ⲁⲩⲱ ⲕⲉⲟⲩⲁ ϩⲓϩⲃⲟⲩⲣ ⲙ̄ⲙⲟϥ, ⲓ︤ⲥ︥ ⲇⲉ ⲛⲉϥϩⲛ̄ⲧⲉⲩⲙⲏⲧⲉ. ⲁϥϥⲓ ⲛ̄ⲛⲉϥⲃⲁⲗ ⲉϩⲣⲁⲓ ⲉⲧⲡⲉ ⲡⲉϫⲁϥ, ϫⲉ “ⲡⲁⲉⲓⲱⲧ, ⲕⲱ ⲛⲁⲩ ⲉⲃⲟⲗ, ϫⲉ ⲛ̄ⲥⲉⲥⲟⲟⲩⲛ ⲁⲛ ⲉⲡⲉⲧⲟⲩⲉⲓⲣⲉ ⲙ̄ⲙⲟϥ.” ⲁⲩⲱ ⲛⲉⲩⲥⲱⲃⲉ …</p>
+					<p>“… ⲧⲃ … ⲙⲟⲓ, ⲙ̄ⲡⲣ̄ϩⲱⲧⲃ ⲙ̄ⲡⲁϫⲟⲉⲓⲥ ⲓ︤ⲥ︥ ⲁⲩⲱ ⲡⲁⲛⲟⲩⲧⲉ: ⲡⲁⲓ ⲡⲉ ⲡⲉⲭ︤ⲥ︥.”</p>
+					<p>ⲛⲁⲓ ⲇⲉ ⲛ̄ⲧⲉⲣⲉϥϫⲟⲟⲩ ⲛ̄ϭⲓⲁⲛⲁⲛⲓⲁⲥ, ⲉⲓⲥ-ⲟⲩⲥⲙⲏ ⲁⲥϣⲱⲡⲉ ϩⲙ̄ⲡⲥⲱⲙⲁ ⲙ̄ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ, ⲉⲥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲱ ⲁⲛⲁⲛⲓⲁⲥ, ⲛ̄ⲛⲉ-ⲧⲉⲕⲯⲩⲭⲏ ⲡⲱⲧ ⲉⲁⲙⲛⲧⲉ. ⲛ̄ⲛⲉ-ⲡⲉⲕⲥⲱⲙⲁ ⲣ̄ⲥⲧⲟⲓ ⲛ̄ⲣⲉϥⲙⲟⲟⲩⲧ. ⲉⲩⲉⲥϩⲁⲓ ⲙ̄ⲡⲉⲕⲣⲁⲛ ⲉⲡϫⲱⲱⲙⲉ ⲙ̄ⲡⲱⲛϩ. ⲉⲩⲉⲙⲟⲩⲧⲉ ⲉⲣⲟⲕ ϫⲉ ⲧⲁⲡⲁⲣⲭⲏ ⲙ̄ⲡⲕⲁⲣⲡⲟⲥ ⲙ̄ⲡⲉⲥⲙⲟⲩ.” … ⲛ … ⲛⲓⲁⲥ.</p>
+					<p>ⲡϩⲗⲗⲟ ⲇⲉ ⲙ̄ⲙⲁⲕⲁⲣⲓⲟⲥ ⲁϥⲟⲩⲱⲛ ⲛ̄ⲣⲱϥ ⲁϥⲥⲙⲟⲩ ⲉⲡⲛⲟⲩⲧⲉ, ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲁ-ⲡⲁϩⲏⲧ ⲟⲩⲛⲟϥ ϩⲙ̄ⲡⲉⲥϯⲛⲟⲩϥⲉ ⲙ̄ⲡϣⲏⲣⲉ ⲙ̄ⲡⲟⲩⲧⲉ. ⲁ-ⲡⲉϥⲟⲩⲟⲉⲓⲛ ϣⲱⲡⲉ ϩⲛ̄ⲧⲁⲯⲩⲭⲏ. ⲡⲉⲟⲟⲩ ⲛⲁⲕ, ⲙⲛ̄ⲡⲉⲕⲉⲓⲱⲧ ⲛ̄ⲁⲅⲁⲑⲟⲥ, ⲙⲛ̄ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲉⲧⲟⲩⲁⲁⲃ, ϣⲁⲉⲛⲉϩ ⲛ̄ⲉⲛⲉϩ. ϩⲁⲙⲏⲛ.”</p>
+					<p>ⲁⲛⲁⲛⲓⲁⲥ ⲇⲉ ⲙ̄ⲡⲉϥ … ⲟϥ … ϥ, ⲁⲩⲛⲟϫϥ̄ ⲉⲡⲕⲱϩⲧ. ⲡⲕⲱϩⲧ ⲇⲉ ⲁϥϯⲕⲃⲟϥ ⲉⲡⲉϥⲥⲱⲙⲁ ⲛ̄ⲧϩⲉ ⲛ̄ⲟⲩⲛⲓϥⲉ ⲛ̄ⲉⲓⲱⲧⲉ. ⲉ-ⲛⲉϥϣⲟⲟⲡ ⲡⲉ ϩⲛ̄ⲧⲙⲏⲧⲉ ⲙ̄ⲡⲕⲱϩⲧ ⲛ̄ϣⲟⲙⲛⲧ ⲛ̄ϩⲟⲟⲩ ⲙⲛ̄ϣⲟⲙⲧⲉ ⲛ̄ⲟⲩϣⲏ, ϣⲁⲛⲧⲉ-ⲡⲥⲱⲧⲏⲣ ⲧⲱⲟⲩⲛ ⲉⲃⲟⲗ ϩⲛ̄ⲛⲉⲧⲙⲟⲟⲩⲧ. ⲛ̄ⲧⲉⲣⲟⲩⲛⲁⲩ ⲇⲉ ⲉⲣⲟϥ ϫⲉ ⲙ̄ⲡⲉ-ⲡⲕⲱϩⲧ ϫⲱϩ ⲉⲣⲟϥ ⲉⲡⲧⲏⲣϥ, ⲁ-ⲛⲉⲁⲣⲭⲓⲉⲣⲉⲩⲥ ⲕⲱⲱⲛⲥ ⲙ̄ⲙⲟϥ ⲛ̄ⲟⲩⲙⲉⲣⲉϩ … ⲁ … ⲙ … ⲉⲓⲱⲧ. ⲛ̄ⲧⲉⲩⲛⲟⲩ ⲁ-ⲡⲥⲱⲧⲏⲣ ϫⲓ ⲛ̄ⲧⲉⲯⲩⲭⲏ ⲛ̄ⲁⲛⲁⲛⲓⲁⲥ ⲉϩⲣⲁⲓ ⲛⲙ̄ⲙⲁϥ ⲉⲙ̄ⲡⲏⲩⲉ. ⲡⲉϫⲉ-ⲡϫⲟⲉⲓⲥ ⲛⲁϥ, ϫⲉ “ⲛⲁⲓⲁⲧⲕ̄ ⲛⲧⲟⲕ, ⲱ ⲁⲛⲁⲛⲓⲁⲥ, ϫⲉ ⲁⲕⲡⲓⲥⲧⲉⲩⲉ ⲉⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ ⲙ̄ⲡⲉⲟⲩⲟⲉⲓϣ ⲉⲕϩⲙ̄ⲡⲕⲟⲥⲙⲟⲥ. ⲟⲩ ⲙⲟⲛⲟⲛ ϫⲉ ⲁⲕⲡⲓⲥⲧⲉⲩⲉ, ⲁⲗⲗⲁ ⲁⲕⲣ̄ⲥⲩⲅⲅⲉⲛⲏⲥ ⲉⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ. ⲉⲧⲃⲉⲡⲁⲓ, ⲡⲉⲕⲥⲱⲙⲁ ⲛ̄ⲧⲁⲕⲧⲟϭϥ̄ ⲉⲡⲁⲥⲱⲙⲁ ⲛ̄ⲛⲉϥⲕⲛⲟⲥ, ⲛ̄ⲛⲉ-ⲡⲕⲁϩ ⲃⲟⲗϥ̄ ⲉⲃⲟⲗ, ϫⲉ …</p>
 				</div>
 				<div class="my_translation"></div>
-					<h2>III. Évangile (?) Apocryphe.</h2>
 				<div class="source_translation">
 					<h3>Traduction.</h3>
 					<h4>Premier Fragment.</h4>
@@ -187,6 +194,13 @@
 			</div>
 			<div class="work">
 				<h2>IV. Apocalypse de Barthélemy</h2>
+				<div class="normalized_text coptic">
+					<p>… ⲗⲓⲁⲣ ⲁϥⲕⲁⲧⲁⲡⲁⲧⲉⲓ ⲙ̄ⲙⲉⲗⲭⲓⲣ, ⲁϥⲥⲱⲛϩ ⲙ̄ⲙⲟϥ ⲉⲩϩⲁⲗⲩⲥⲓⲥ ⲙ̄ⲃⲉⲛⲓⲡⲉ ϩⲓⲗⲁⲓⲛ.</p>
+					<p>ⲛ̄ϩⲟⲥⲟⲛ ⲉⲣⲉ-ⲡⲙⲟⲩ ϣⲁϫⲉ ⲙⲛ̄ⲧⲕⲁⲓⲥⲉ ⲛ̄ⲓ︤ⲥ︥ ϩⲙ̄ⲡⲉⲙϩⲁⲁⲩ, ⲁ-ⲓ︤ⲥ︥ ⲉⲗⲉⲩⲑⲉⲣⲟⲩ ⲙ̄ⲡⲅⲉⲛⲟⲥ ⲧⲏⲣϥ̄ ⲛ̄ⲛⲉⲣⲱⲙⲉ, ⲁϥⲣ̄ⲡⲁϩⲣⲉ ⲉⲛⲉϣⲏⲣⲉ ⲛ̄ⲁⲇⲁⲙ ⲛ̄ⲧⲁ-ⲡϫⲁϫⲉ ⲡⲗⲏⲅⲏ ⲙ̄ⲙⲟⲟⲩ, ⲁϥⲕⲧⲟ ⲙ̄ⲡⲉⲥⲟⲟⲩ ⲛ̄ⲧⲁϥⲥⲱⲣⲙ ⲉϩⲟⲩⲛ ⲉⲧⲉϥϣⲁⲓⲣⲉ ⲛ̄ⲕⲉⲥⲟⲡ, ⲁϥⲕⲧⲟ ⲛ̄ⲁⲇⲁⲙ ⲉⲧⲉϥⲁⲣⲭⲏ ⲛ̄ⲕⲉⲥⲟⲡ, ⲁϥⲕⲁ-ⲛⲉϥⲛⲟⲃⲉ ⲛⲁϥ ⲉⲃⲟⲗ ϩⲛ̄ⲟⲩⲉⲓⲣⲏⲛⲏ. ϩⲁⲙⲏⲛ.</p>
+					<p></p>
+					<p></p>
+					<p></p>
+				</div>
 				<div class="my_translation"></div>
 				<div class="source_translation">
 					<h3>Traduction.</h3>
