--- a/coptic/wip/index.html
+++ b/coptic/wip/index.html
@@ -221,12 +221,8 @@
 					<p>ⲙ̄ⲡⲉⲟⲩⲟⲉⲓϣ ⲛ̄ⲧⲁ-ⲡⲥⲱⲧⲏⲣ ⲉⲓⲛⲉ ⲙ̄ⲙⲟⲛ ⲉϫⲙ̄ⲡⲧⲟⲟⲩ ⲛ̄ⲛⲉϫⲟⲉⲓⲧ, ⲁϥϣⲁϫⲉ ⲛⲙ̄ⲙⲁⲛ ϩⲛ̄ⲟⲩⲁⲥⲡⲉ ⲙ̄ⲡⲉⲛⲉⲓⲙⲉ ⲉⲣⲟⲥ ⲡⲣⲟⲥⲧⲉⲩⲛⲟⲩ ⲁϥⲟⲩⲟⲛϩⲥ̄ ⲛⲁⲛ ⲉⲃⲟⲗ, ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲁⲛⲉⲑⲁⲣⲁⲑ”. ⲛ̄ⲧⲉⲩⲛⲟⲩ ⲁ-ⲙ̄ⲡⲏⲩⲉ ⲟⲩⲱⲛ ⲛ̄ⲥⲁⲛⲉⲩⲉⲣⲏⲩ, ⲁ-ⲛ̄ⲉⲥⲱ ⲟⲛ ⲣ̄ⲟⲩⲟⲉⲓⲛ ⲛ̄ⲧϩⲉ ⲛ̄ⲟⲩⲭⲓⲱⲛ. ⲁⲩⲱ ⲁ-ⲡⲥⲱⲧⲏⲣ ⲁⲛⲁⲭⲱⲣⲉⲓ ⲛⲁϥ ⲉϩⲣⲁⲓ ⲉⲙ̄ⲡⲏⲩⲉ ⲉⲛϭⲱϣⲧ ⲛ̄ⲥⲱϥ. ⲧⲟⲧⲉ ⲁ-ⲡⲥⲱⲧⲏⲣ ⲡⲁϩⲧϥ̄ ⲙ̄ⲡⲉϥⲉⲓⲱⲧ ⲛ̄ⲁⲅⲁⲑⲟⲥ, ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲡⲁⲉⲓⲱⲧ, ϣⲛ-ϩⲧⲏⲕ ϩⲁⲛⲁⲥⲛⲏⲩ ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ, ⲛ̄ⲅⲥⲙⲟⲩ ⲉⲣⲟⲟⲩ ϩⲙ̄ⲡⲉⲥⲙⲟⲩ ⲛ̄ⲁⲧⲱϫⲛ.” ⲧⲟⲧⲉ ⲁ-ⲡⲉⲓⲱⲧ, ⲙⲛ̄ⲡϣⲏⲣⲉ ⲙⲛ̄ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲉⲧⲟⲩⲁⲁⲃ, ⲥⲟⲟⲩⲧⲛ ⲉⲃⲟⲗ ⲛ̄ⲧⲉϥϭⲓϫ ⲉϫⲛ̄ⲧⲁⲡⲉ ⲙ̄ⲡⲉⲧⲣⲟⲥ, ⲁϥⲭⲉⲓⲣⲟⲧⲟⲛⲉⲓ ⲙ̄ⲙⲟϥ ⲛ̄ⲁⲣⲭⲏⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲉⲡⲕⲟⲥⲙⲟⲥ ⲧⲏⲣϥ̄, ⲁϥⲥⲙⲟⲩ ⲉⲣⲟϥ ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲉⲕⲉϣⲱⲡⲉ ⲛ̄ϫⲱϫ ⲁⲩⲱ ⲛ̄ⲁⲡⲉ ϩⲛ̄ⲧⲁⲙⲛⲧⲣⲣⲟ, ⲁⲩⲱ ⲛ̄ⲅϣⲱⲡⲉ ⲟⲛ ⲉϫⲙ̄ⲡⲕⲟⲥⲙⲟⲥ ⲧⲏⲣϥ̄, ϫⲉ ⲁⲛⲟⲕ ⲙⲛ̄ⲡⲁϣⲏⲣⲉ ⲙ̄ⲙⲉⲣⲓⲧ ⲙⲛ̄ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲉⲧⲟⲩⲁⲁⲃ ⲁⲛⲕⲱ ⲛ̄ⲛ̄ϭⲓϫ ⲉϩⲣⲁⲓ ⲉϫⲱⲕ, ⲁⲩⲱ ⲡⲉⲧⲕ̄ⲛⲁⲙⲟⲣϥ̄ ϩⲓϫⲙ̄ⲡⲕⲁϩ ϥⲛⲁϣⲱⲡⲉ ⲉϥⲙⲏⲣ ϩⲛ̄ⲙ̄ⲡⲏⲩⲉ, ⲁⲩⲱ ⲡⲉⲧⲕ̄ⲛⲁⲃⲟⲗϥ̄ ⲉⲃⲟⲗ ϩⲓϫⲙ̄ⲡⲕⲁϩ ϥⲛⲁϣⲱⲡⲉ ⲉϥⲃⲏⲗ ⲉⲃⲟⲗ ϩⲛ̄ⲙ̄ⲡⲏⲩⲉ, ⲁⲩⲱ ⲙⲛ̄-ⲗⲁⲁⲩ ⲛⲁϣⲱⲡⲉ ⲉϥϫⲟⲥⲉ ⲉⲣⲟⲕ ⲙⲛ̄ⲡⲉⲕⲑⲣⲟⲛⲟⲥ, ⲁⲩⲱ ⲡⲉⲧⲉⲛ̄ϥⲛⲁϣⲱⲡⲉ ⲁⲛ ϩⲁⲧⲡⲁϣⲛⲉⲥ ⲙ̄ⲡⲉⲕⲑⲣⲟⲛⲟⲥ ⲧⲉϥϭⲓϫ ⲥⲧⲏⲩ ⲉⲃⲟⲗ. ⲡⲉⲕⲛⲓϥⲉ ⲉϥⲉϣⲱⲡⲉ ⲉϥⲙⲉϩ ⲉⲃⲟⲗ ϩⲙ̄ⲡⲛⲓϥⲉ ⲙ̄ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲉⲧⲟⲩⲁⲁⲃ, ϫⲉⲕⲁⲁⲥ ⲣⲱⲙⲉ ⲛⲓⲙ ⲉⲕⲛⲁⲃⲁⲡⲧⲓⲍⲉ ⲙ̄ⲙⲟϥ ⲉϥⲉϫⲓ ⲉⲃⲟⲗ ϩⲙ̄ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲉⲧⲟⲩⲁⲁⲃ.” ⲁⲩⲟⲩⲱϣⲃ ⲛ̄ϭⲓⲛⲉⲧⲁⲅⲙⲁ ⲧⲏⲣⲟⲩ ⲛ̄ⲙ̄ⲡⲏⲩⲉ, ϫⲉ “ϩⲁⲙⲏⲛ. ⲁⲗⲏⲗⲟⲩⲓⲁ”.</p>
 					<p>ⲁⲩⲱ ⲁϥⲥⲙⲟⲩ ⲉⲁⲛⲇⲣⲉⲁⲥ ⲉϥϫⲱ ⲙ̄ⲙⲟⲥ, ϫⲉ “ⲉⲕⲉϣⲱⲡⲉ ⲛ̄ⲟⲩⲥⲧⲩⲗⲟⲥ ⲛ̄ⲟⲩⲟⲉⲓⲛ ϩⲛ̄ⲑ︤ⲓ︦ⲗ︦ⲏ︦ⲙ︥ ⲛ̄ⲧⲡⲉ”. ⲓⲁⲕⲱⲃⲟⲥ ϩⲱⲱϥ, ϫⲉ ⲡⲟⲗⲓⲥ ⲛⲓⲙ ϩⲓϯⲙⲉ ⲛⲓⲙ ⲉⲕⲛⲁⲡⲱⲧ ⲉϩⲟⲩⲛ ⲉⲣⲟⲟⲩ, ⲕⲛⲁⲛⲁⲩ ⲉⲣⲟⲓ ⲙⲛ̄ⲡⲁϣⲏⲣⲉ ⲙ̄ⲡⲁⲧⲉⲕⲡⲱⲧ ⲉϩⲟⲩⲛ ⲉⲣⲟⲟⲩ. ⲁⲩⲱ ⲓⲱϩⲁⲛⲛⲏⲥ ⲡⲁⲙⲉⲣⲓⲧ ⲁⲩⲱ ⲡⲙⲉⲣⲓⲧ ⲙ̄ⲡⲁϣⲏⲣⲉ, ⲕⲛⲁϣⲱⲡⲉ ⲉⲕⲥⲙⲁⲙⲁⲁⲧ ϩⲛ̄ⲧⲁⲙⲛⲧⲣⲣⲟ.</p>
 					<p>ⲁⲩⲱ ⲛⲧⲟⲕ ϩⲱⲱⲕ, ⲫⲓⲗⲓⲡⲡⲟⲥ, ⲡⲟⲗⲓⲥ ⲛⲓⲙ ϩⲓϯⲙⲉ ⲛⲓⲙ ⲉⲕⲛⲁⲃⲱⲕ ⲉϩⲟⲩⲛ ⲉⲣⲟⲟⲩ, ⲡⲉⲥⲧⲁⲩⲣⲟⲥ ⲙ̄ⲡⲁϣⲏⲣⲉ ⲛⲁϭⲱ ⲉϥⲙⲟⲟϣⲉ ϩⲓⲧϩⲏ ⲙ̄ⲙⲟⲕ ϣⲁⲛⲧⲟⲩⲡⲓⲥⲧⲉⲩⲉ ⲉⲣⲟⲕ.</p>
-					<p>ⲛⲧⲟⲕ ϩⲱⲱⲕ, ⲃⲁⲣⲑⲟⲗⲟⲙⲁⲓⲟⲥ ⲡⲁϣⲏⲣⲉ, ⲉⲣⲉ-ⲧⲉⲕⲯⲩⲭⲏ ⲣ̄ⲣⲙⲛϭⲟⲓⲗⲉ ϩⲛ̄ⲛⲉⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲙ̄ⲡⲁϣⲏⲣⲉ. ⲛⲧⲟⲕ ⲇⲉ, ⲱ ⲙⲁⲑⲁⲓⲟⲥ, ⲧⲉⲕϭⲟⲙ ⲛⲁⲁϣⲁⲓ ϩⲱⲥⲧⲉ ⲛ̄ⲧⲉ-ⲧⲉⲕϩⲁⲓⲃⲉⲥ ⲧⲟⲩⲛⲉⲥ-ⲛⲉⲧⲙⲟⲟⲩⲧ. ⲛⲧⲟⲕ ⲇⲉ ϩⲱⲱⲕ, ⲱ ⲓⲁⲕⲱⲃⲟⲥ (ⲉⲧⲉⲡⲁ-ⲁⲗⲫⲁⲓⲟⲥ ⲡⲉ), ⲛ̄ⲛⲉ-ⲗⲁⲁⲩ ⲛ̄ϭⲟⲙ ⲛ̄ⲧⲉⲡⲇⲓⲁⲃⲟⲗⲟⲥ ϭⲙϭⲟⲙ ⲉⲡⲉⲕⲥⲱⲙⲁ ⲏ ⲡⲉⲕⲧⲁϣⲉⲟⲉⲓϣ ϩⲙ̄ⲙⲁ ⲛⲓⲙ, ⲁⲗⲗⲁ ⲡⲏ ⲉⲧⲕ̄ⲛⲁⲧⲟϭϥ̄ ⲉϥⲉϣⲱⲡⲉ ⲛ̄ⲁⲧⲡⲱⲣⲕ ϣⲁⲉⲛⲉϩ.</p>
-					<p></p>
-					<p></p>
-					<p></p>
-					<p></p>
-					<p></p>
+					<p>ⲛⲧⲟⲕ ϩⲱⲱⲕ, ⲃⲁⲣⲑⲟⲗⲟⲙⲁⲓⲟⲥ ⲡⲁϣⲏⲣⲉ, ⲉⲣⲉ-ⲧⲉⲕⲯⲩⲭⲏ ⲣ̄ⲣⲙⲛϭⲟⲓⲗⲉ ϩⲛ̄ⲛⲉⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲙ̄ⲡⲁϣⲏⲣⲉ. ⲛⲧⲟⲕ ⲇⲉ, ⲱ ⲙⲁⲑⲁⲓⲟⲥ, ⲧⲉⲕϭⲟⲙ ⲛⲁⲁϣⲁⲓ ϩⲱⲥⲧⲉ ⲛ̄ⲧⲉ-ⲧⲉⲕϩⲁⲓⲃⲉⲥ ⲧⲟⲩⲛⲉⲥ-ⲛⲉⲧⲙⲟⲟⲩⲧ. ⲛⲧⲟⲕ ⲇⲉ ϩⲱⲱⲕ, ⲱ ⲓⲁⲕⲱⲃⲟⲥ (ⲉⲧⲉⲡⲁ-ⲁⲗⲫⲁⲓⲟⲥ ⲡⲉ), ⲛ̄ⲛⲉ-ⲗⲁⲁⲩ ⲛ̄ϭⲟⲙ ⲛ̄ⲧⲉⲡⲇⲓⲁⲃⲟⲗⲟⲥ ϭⲙϭⲟⲙ ⲉⲡⲉⲕⲥⲱⲙⲁ ⲏ ⲡⲉⲕⲧⲁϣⲉⲟⲉⲓϣ ϩⲙ̄ⲙⲁ ⲛⲓⲙ, ⲁⲗⲗⲁ ⲡⲏ ⲉⲧⲕ̄ⲛⲁⲧⲟϭϥ̄ ⲉϥⲉϣⲱⲡⲉ ⲛ̄ⲁⲧⲡⲱⲣⲕ ϣⲁⲉⲛⲉϩ. ⲛⲧⲟⲕ ϩⲱⲱⲕ, ⲥⲓⲙⲱⲛ ⲡⲥⲩⲗⲱⲧⲏⲥ, ⲙⲁ ⲛⲓⲙ ⲛ̄ⲧⲁⲕⲧⲁϫⲣⲟ ⲙ̄ⲡⲗⲟⲅⲟⲥ ⲙ̄ⲡⲁϣⲏⲣⲉ ⲛ̄ϩⲏⲧϥ̄, ⲛ̄ⲛⲉ-ⲗⲁⲁⲩ ⲛ̄ⲇⲩⲛⲁⲙⲓⲥ ⲛ̄ⲧⲉⲡⲁⲛⲧⲓⲕⲉⲓⲙⲉⲛⲟⲥ ϣ̄ϩⲱⲛ ⲉϩⲟⲩⲛ ⲉⲣⲟϥ. ⲛⲧⲟⲕ ⲇⲉ ϩⲱⲱⲕ, ⲱ ⲡⲁⲙⲁⲕⲁⲣⲓⲟⲥ ⲙⲁⲑⲓⲁⲥ, ⲡⲉⲕⲥϯⲛⲟⲩϥⲉ ⲛⲁⲙⲟⲟϣⲉ ⲉⲃⲟⲗ ϩⲙ̄ⲡⲕⲟⲥⲙⲟⲥ, ϫⲉ ⲛⲧⲟⲕ ⲟⲩⲣⲙⲙⲁⲟ ⲕⲁⲧⲁⲡⲉⲓⲕⲟⲥⲙⲟⲥ ⲁⲩⲱ ⲁⲕⲕⲁ-ϩⲱⲃ ⲛⲓⲙ ⲛ̄ⲥⲱⲕ ⲁⲕⲟⲩⲁϩⲕ̄ ⲛ̄ⲥⲱⲓ.” ⲛⲉⲧⲁⲅⲙⲁ ⲇⲉ ⲧⲏⲣⲟⲩ ⲛ̄ⲙ̄ⲡⲏⲩⲉ, ⲛ̄ⲧⲉⲣⲟⲩⲛⲁⲩ ⲉⲛⲉⲓⲥⲙⲟⲩ, ⲉⲣⲉ-ⲡⲉⲓⲱⲧ ϫⲱ ⲙ̄ⲙⲟⲟⲩ ⲉⲛⲉⲁⲡⲟⲥⲧⲟⲗⲟⲥ, ⲁⲩⲟⲩⲱϣⲃ ⲧⲏⲣⲟⲩ, ϫⲉ “ϩⲁⲙⲏⲛ”. ⲧⲉⲛⲟⲩ ϭⲉ, ⲱ ⲛⲁⲥⲛⲏⲩ ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ, ⲕⲱ ⲛⲁⲓ ⲉⲃⲟⲗ ⲁⲛⲟⲕ, ⲃⲁⲣⲑⲟⲗⲟⲙⲁⲓⲟⲥ.”</p>
+					<p>ⲧⲟⲧⲉ ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ ⲧⲏⲣⲟⲩ ⲁⲩⲧⲱⲟⲩⲛ ⲁⲩⲁⲥⲡⲁⲍⲉ ⲛ̄ⲃⲁⲣⲑⲟⲗⲟⲙⲁⲓⲟⲥ. ⲛ̄ⲧⲉⲣⲟⲩϫⲉ-ⲛⲁⲓ ⲇⲉ ⲛ̄ϭⲓⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ, ⲁⲩⲧⲱⲟⲩⲛ ⲁⲩⲧⲁⲗⲟ ⲉϩⲣⲁⲓ ⲛ̄ⲧⲉⲡⲣⲟⲥⲫⲟⲣⲁ. ⲛⲉⲣⲉ-ⲧⲡⲁⲣⲑⲉⲛⲟⲥ ⲉⲧⲟⲩⲁⲁⲃ ϩⲁϩⲧⲏⲩ ⲙ̄ⲡⲛⲁⲩ ⲉⲧⲙ̄ⲙⲁⲩ. ⲛ̄ⲧⲉⲣⲉ-ⲓ︤ⲥ︥ ϣⲁϫⲉ ⲛⲙ̄ⲙⲁⲩ, ϫⲉ “ⲁⲙⲏⲓⲧⲛ̄ ⲉⲧⲅⲁⲗⲓⲗⲁⲓⲁ, ⲧⲁϯ ⲛⲏⲧⲛ̄ ⲛ̄ⲧⲁⲉⲓⲣⲏⲛⲏ ϩⲙ̄ⲡⲙⲁ ⲉⲧⲙ̄ⲙⲁⲩ.” ⲛ̄ⲧⲉⲣⲟⲩϫⲓ ⲇⲉ ϩⲙ̄ⲡⲥⲱⲙⲁ ⲙⲛ̄ⲡⲉⲥⲛⲟϥ ⲙ̄ⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ, ⲁ-ⲡⲉⲥϯⲛⲟⲩϥⲉ ⲛ̄ⲧⲉⲩⲑⲩⲥⲓⲁ ⲡⲱⲧ ⲉϩⲣⲁⲓ ϣⲁⲧⲙⲉϩⲥⲁϣϥⲉ ⲙ̄ⲡⲉ. ⲁϥⲟⲩⲱϣⲃ ⲛ̄ϭⲓⲡⲉⲓⲱⲧ ⲡⲉϫⲁϥ ⲙ̄ⲡⲉϥϣⲏⲣⲉ ⲙ̄ⲙⲉⲣⲓⲧ, ϫⲉ “ⲡⲁϣⲏⲣⲉ ⲙ̄ⲙⲟⲛⲟⲅⲉⲛⲏⲥ, ⲧⲱⲟⲩⲛ, ⲛ̄ⲅⲃⲱⲕ ⲉⲡⲉⲥⲏⲧ ⲉⲡⲕⲟⲥⲙⲟⲥ ϣⲁⲛⲉⲕϣⲃⲏⲣ ⲛ̄ⲁⲡⲟⲥⲧⲟⲗⲟⲥ, ⲛ̄ⲅⲥⲟⲗⲥⲗ ⲙ̄ⲙⲟⲟⲩ, ⲁⲩⲱ ⲛ̄ⲅϯϭⲟⲙ ⲛⲁⲩ, ϫⲛ̄ ⲛⲉ-ⲡⲉⲩϩⲏⲧ ⲗⲩⲡⲉⲓ, ⲛ̄ⲥⲉⲕⲁ-ⲧⲟⲟⲧⲟⲩ ⲉⲃⲟⲗ ⲛ̄ⲥⲉⲗⲟ ⲉⲩⲧⲁϣⲉⲟⲉⲓϣ ⲙ̄ⲡⲕⲟⲥⲙⲟⲥ ⲧⲏⲣϥ̄ ϩⲙ̄ⲡⲉⲕⲣⲁⲛ, ⲙⲛ̄ⲡⲱⲓ, ⲙⲛ̄ⲡⲁ-ⲡⲉⲡ︤ⲛ︦ⲁ︥ ⲉⲧⲟⲩⲁⲁⲃ. ⲧⲱⲟⲩⲛ, ⲱ ⲡⲁϣⲏⲣⲉ ⲙ̄ⲙⲉⲣⲓⲧ, ⲛ̄ⲅⲡⲱⲧ ϣⲁⲛⲉⲕⲥⲛⲏⲩ ⲁⲩⲱ ⲛⲉⲕⲁⲡⲟⲥⲧⲟⲗⲟⲥ, ⲛ̄ⲅϯ ⲛⲁⲩ ⲙ̄ⲡⲣⲁϣⲉ, ⲙⲏⲡⲟⲧⲉ ⲛ̄ⲥⲉϫⲟⲟⲥ, ϫⲉ “ⲁ-ⲡⲉⲛⲥⲱⲧⲏⲣ ⲧⲱⲟⲩⲛ ⲉⲃⲟⲗ ϩⲛ̄ⲛⲉⲧⲙⲟⲟⲩⲧ, ⲁϥⲡⲱⲧ ⲉϩⲣⲁⲓ ⲉⲙ̄ⲡⲏⲩⲉ ϩⲛ̄ⲟⲩⲉⲟⲟⲩ ϣⲁⲡⲉϥⲉⲓⲱⲧ, ⲁϥⲕⲁⲁⲛ ϩⲱⲱⲛ ⲉⲃⲟⲗ ϩⲛ̄ⲛⲉⲡⲟⲗⲓⲥ ⲙⲛ̄ⲛⲉϯⲙⲉ, ⲉⲧⲙ̄ϯ ⲛⲁⲛ ⲙ̄ⲡⲣⲁϣⲉ ⲉⲡⲙⲁ ⲛ̄ⲛⲉϩⲓⲥⲉ ⲛ̄ⲧⲁⲛϣⲟⲡⲟⲩ ϩⲙ̄ⲡⲕⲟⲥⲙⲟⲥ.” ⲧⲟⲧⲉ ⲁϥⲧⲱⲟⲩⲛ ⲛ̄ϭⲓⲡϣⲏⲣⲉ ⲙ̄ⲡⲛⲟⲩⲧⲉ ⲁϥⲉⲓ ⲉⲡⲉⲥⲏⲧ ⲉⲡⲕⲟⲥⲙⲟⲥ, ⲁϥⲉⲓ ⲉⲧⲅⲁⲗⲓⲗⲁⲓⲁ, ⲁϥϭⲓⲛⲉ ⲛ̄ⲛⲉϥⲙⲁⲑⲏⲧⲏⲥ ⲙⲛ̄ⲙⲁⲣⲓⲁ ⲧⲡⲁⲣⲑⲉⲛⲟⲥ, ⲉⲩⲥⲟⲟⲩϩ ⲉⲛⲉⲩⲉⲣⲏⲩ. ⲁϥⲟⲩⲟⲛϩϥ̄ ⲉⲣⲟⲟⲩ ⲡⲉϫⲁϥ ⲛⲁⲩ, ϫⲉ “ⲭⲁⲓⲣⲉ, ⲛⲁⲁⲡⲟⲥⲧⲟⲗⲟⲥ ⲉⲧⲥⲟⲧⲡ ⲡⲁⲣⲁⲡⲕⲟⲥⲙⲟⲥ ⲧⲏⲣϥ̄. ⲭⲁⲓⲣⲉ, ⲛⲁⲥⲛⲏⲩ ⲁⲩⲱ ⲛⲁϣⲃⲏⲣ, ⲧⲉⲓⲣⲏⲛⲏ ⲙ̄ⲡⲁⲉⲓⲱⲧ ⲛⲏⲧⲛ̄. ⲧⲁⲉⲓⲣⲏⲛⲏ ⲉⲧⲉⲧⲱⲓ ⲧⲉ, ϯϯ ⲙ̄ⲙⲟⲥ ⲛⲏⲧⲛ̄.” ⲁϥⲛⲓϥⲉ ⲉϩⲟⲩⲛ ϩⲙ̄ⲡⲉⲩϩⲟ ⲡⲉϫⲁϥ ⲛⲁⲩ, ϫⲉ “ϫⲓⲡ︤ⲛ︦ⲁ︥ ⲉϥⲟⲩⲁⲁⲃ ⲛⲏⲧⲛ̄, ⲛⲉⲧⲉⲧⲛ̄ⲛⲁⲕⲁ-ⲛⲉⲩⲛⲟⲃⲉ ⲛⲁⲩ ⲉⲃⲟⲗ, ⲥⲉⲛⲁⲕⲁⲁ, ⲁⲩⲱ ⲛⲉⲧⲉⲧⲛ̄ⲛⲁⲁⲙⲁϩⲧⲉ ⲛ̄ⲛⲟⲩⲟⲩ, ⲥⲉⲛⲁⲁⲙⲁϩⲧⲉ ⲙ̄ⲙⲟⲟⲩ.” ⲁⲩⲱ ⲁϥⲧⲁⲙⲟⲛ ⲉⲛⲉϥⲟⲩⲉⲣⲏⲧⲉ …</p>
 				</div>
 				<div class="my_translation"></div>
 				<div class="source_translation">
@@ -324,6 +320,14 @@
 			</div>
 			<div class="work">
 				<h2>V. Évangile (?) Apocryphe.</h2>
+				<div class="normalized_text coptic">
+					<p>… ⲙ̄ⲙⲟⲕ ⲉϩⲱⲃ ⲛⲓⲙ. </p>
+					<p></p>
+					<p></p>
+					<p></p>
+					<p></p>
+					<p></p>
+				</div>
 				<div class="my_translation"></div>
 				<div class="source_translation">
 					<h3>Traduction.</h3>
